--- a/1/A/app_03.tex
+++ b/1/A/app_03.tex
@@ -1,4 +1,4 @@
-\chapter{附录一~~国际单位制（SI）}
+\chapter{国际单位制（SI）}
 
 我们知道，物理公式在确定物理量的数量关系的同时，也
 确定了物理量的单位关系．因此，只要我们选定为数不多的
@@ -7,23 +7,23 @@
 质量和时间就是三个基本量，基本量的单位，如米、千克、秒
 等，叫做基本单位，由基本量根据有关公式推导出来的其他
 物理量，叫做\textbf{导出量}，导出量的单位叫做\textbf{导出单位}．
-\begin{table}[htp]
+\begin{table}[htbp]
     \centering
-    \caption{国际单位制的基本单位}
-\begin{tabular}{cccc}
-    \hline
-    物理量名称 & 单位名称 & \multicolumn{2}{c}{单位符号}\\
-&&中文 & 英文\\
-\hline
-长度 & 米 & 米 & m\\
-质量 & 千克 & 千克 &kg\\
-时间 & 秒 & 秒 &s\\
-电流 & 安培 & 安 &A\\ 
-热力学温度 & 开尔文 & 开 &K\\ 
-发光强度 & 坎德拉 & 坎 & cd\\
-物质的量 & 摩尔 & 摩 & mol\\
-\hline
-\end{tabular}
+    \begin{tabular}{cccc}
+        \hline
+        物理量名称 & 单位名称 & \multicolumn{2}{c}{单位符号}\\
+    	&&中文 & 英文\\
+    	\hline
+	    长度 & 米 & 米 & m\\
+	    质量 & 千克 & 千克 &kg\\
+	    时间 & 秒 & 秒 &s\\
+	    电流 & 安培 & 安 &A\\ 
+	    热力学温度 & 开尔文 & 开 &K\\ 
+	    发光强度 & 坎德拉 & 坎 & cd\\
+	    物质的量 & 摩尔 & 摩 & mol\\
+	    \hline
+    \end{tabular}
+    \caption{国际单位制的基本单位}\label{tab_A_10-4}
 \end{table}
 
 所谓单位制，就是有关基本单位、导出单位等一系列单位
@@ -41,47 +41,47 @@
 基本量，它们的单位用米、千克、秒为基本单位，对于象热学、
 电磁学、光学等学科，除了上述三个基本单位外，还要加上另
 外的基本量，并选定合适的基本单位，才能导出其他物理量的
-单位．这样，国际单位制的基本单位共有七个．表1和表2
-分别列出了国际单位制的基本单位和常用的力学量的国际单
+单位．这样，国际单位制的基本单位共有七个．表~\ref{tab_A_10-4} 和表~\ref{tab_A_10-5} 分别列出了国际单位制的基本单位和常用的力学量的国际单
 位制单位．
 
 
 
-\begin{table}\centering
-    \caption{常用的力学量的国际单位制单位}
+\begin{table}[htbp]
+	\centering
     \begin{tabular}{cc|cc|c}
-      \hline
+        \hline
         \multicolumn{2}{c}{物理量}     & \multicolumn{2}{|c|}{单位}& 量纲式\\
-名称 & 符号 & 名称 & 国际符号 &\\
-\hline
-面积    &  $S$    &  平方米    & ${\rm m}^2$ & $[L^2]$ \\
-体积   &  $V$    &   立方米   &  ${\rm m}^3$ &$[L^3]$\\
-位移   &  $s$    &   米   &  ${\rm m}$ &$[L]$\\
-速度   &   $v$   &    米每秒  & ${\rm m}/{\rm s}$ &$[LT^{-1}]$  \\
-加速度   &  $a$    & 米每二次方秒     &  ${\rm m}/{\rm s^2}$ & $[LT^{-2}]$\\
-角速度   &  $\omega$    &  弧度每秒    & ${\rm rad}/{\rm s}$ & $[T^{-1}]$ \\
-角加速度   &  $d$    &   弧度每二次方秒   &  ${\rm rad}/{\rm s^2}$ & $[T^{-2}]$\\
-转速   &   $n$   &   1每秒   &  ${\rm s}^{-1}$ & $[T^{-1}]$\\
-频率   &  $\nu,\; f$    &  赫兹    &  Hz & $[T^{-1}]$\\
-密度   &  $\rho$    &  千克每立方米    & ${\rm kg}/{\rm m^3}$  &$[L^{-3}M]$ \\
-力   &  $F$    &  牛顿    &  N &$[LMT^{-2}]$\\
-重量   &  $G$    &    牛顿  & N  &$[LMT^{-2}]$\\
-力矩   &  $M$    &    牛顿米  & ${\rm N}\cdot {\rm m}$  & $[L^2MT^{-2}]$\\
-动量   &  $p$    & 千克米每秒     &  ${\rm kg}\cdot {\ms}$ &$[LMT^{-1}]$\\
-冲量   &  $I$    &  牛顿秒    &   ${\rm N}\cdot {\rm s}$&$[LMT^{-1}]$\\
-压强   &  $p$    &   帕斯卡   &  Pa & $[L^{-1}MT^{-2}]$\\
-功   &  $W$    &   焦耳   &  J & $[L^2MT^{-2}]$\\
-能   &   $E$   &   焦耳   &  J & $[L^2MT^{-2}]$\\
-功率   &  $P$    &  瓦特    & W &$[L^2MT^{-3}]$ \\
-\hline
+        名称 & 符号 & 名称 & 国际符号 &\\
+        \hline
+        面积    &  $S$    &  平方米    & ${\rm m}^2$ & $[L^2]$ \\
+        体积   &  $V$    &   立方米   &  ${\rm m}^3$ &$[L^3]$\\
+        位移   &  $s$    &   米   &  ${\rm m}$ &$[L]$\\
+        速度   &   $v$   &    米每秒  & ${\rm m}/{\rm s}$ &$[LT^{-1}]$  \\
+        加速度   &  $a$    & 米每二次方秒     &  ${\rm m}/{\rm s^2}$ & $[LT^{-2}]$\\
+        角速度   &  $\omega$    &  弧度每秒    & ${\rm rad}/{\rm s}$ & $[T^{-1}]$ \\
+        角加速度   &  $d$    &   弧度每二次方秒   &  ${\rm rad}/{\rm s^2}$ & $[T^{-2}]$\\
+        转速   &   $n$   &   1每秒   &  ${\rm s}^{-1}$ & $[T^{-1}]$\\
+        频率   &  $\nu,\; f$    &  赫兹    &  Hz & $[T^{-1}]$\\
+        密度   &  $\rho$    &  千克每立方米    & ${\rm kg}/{\rm m^3}$  &$[L^{-3}M]$ \\
+        力   &  $F$    &  牛顿    &  N &$[LMT^{-2}]$\\
+        重量   &  $G$    &    牛顿  & N  &$[LMT^{-2}]$\\
+        力矩   &  $M$    &    牛顿米  & ${\rm N}\cdot {\rm m}$  & $[L^2MT^{-2}]$\\
+        动量   &  $p$    & 千克米每秒     &  ${\rm kg}\cdot {\Ums}$ &$[LMT^{-1}]$\\
+        冲量   &  $I$    &  牛顿秒    &   ${\rm N}\cdot {\rm s}$&$[LMT^{-1}]$\\
+        压强   &  $p$    &   帕斯卡   &  Pa & $[L^{-1}MT^{-2}]$\\
+        功   &  $W$    &   焦耳   &  J & $[L^2MT^{-2}]$\\
+        能   &   $E$   &   焦耳   &  J & $[L^2MT^{-2}]$\\
+        功率   &  $P$    &  瓦特    & W &$[L^2MT^{-3}]$ \\
+        \hline
     \end{tabular}
-\end{table}	
+     \caption{常用的力学量的国际单位制单位}\label{tab_A_10-5}
+\end{table}
 
 
 
 
 
-\chapter{附录二~~量纲}
+\chapter{量纲}
 
 我们知道，物理量可分为基本量和导出量，既然导出量
 可以从基本量导出，那么每个导出量一定可以用基本量的某
@@ -111,19 +111,6 @@
 验时所根据的原则是：只有量纲式相同的项才能相加减，而且
 等号两边一定要有相同的量纲式．一个正确的物理关系式，
 一定是符合上述原则的．
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
