--- a/physics.tex
+++ b/physics.tex
@@ -25,15 +25,21 @@
 	
 	
 	%正文内容
-	%\include{1/A/01}
-	%\include{1/A/02}
-	%\include{1/A/03}
-	%\include{1/A/04}
-	%\include{1/A/05}
-	%\include{1/A/06}
-	%\include{1/A/07}
-	%\include{1/A/08}
-	\include{1/A/09}
+	%\include{1/A/01} %力
+	%\include{1/A/02} %直线运动
+	%\include{1/A/03} %运动定律
+	%\include{1/A/04} %曲线运动
+	%\include{1/A/05} %万有引力定律
+	%\include{1/A/06} %物体的平衡
+	%\include{1/A/07} %机械能
+	%\include{1/A/08} %动量
+	%\include{1/A/09} %机械振动和机械波
+	
+	\include{1/A/app_01} %学生实验
+	\include{1/A/app_02} %课外实验活动
+	
+	\appendix
+	\include{1/A/app_03} %附录
 	
 \end{document}
 
