--- a/1/B/01.tex
+++ b/1/B/01.tex
@@ -1,4 +1,5 @@
-\chapter{分子运动论基础}
+\chapter{分子运动论基础}\label{chapter-foundations-of-molecular-kinematics}
+
 从这一章开始我们学习热学知识，热学是物理学的一部
 分，它研究热现象的规律．热现象跟力学现象不同，描述热现
 象的一个基本概念是温度，温度发生变化的时候，物体的许
@@ -71,7 +72,7 @@
 小呢？
 
     一种粗略地测定分子大小的方法是油膜法，把油滴滴到
-水面上，油在水面上要尽可能地散开，形成单分子油膜（图1.1）．如果把分子看成球形，单分子油膜的厚度就可以认为等
+水面上，油在水面上要尽可能地散开，形成单分子油膜（图~\ref{fig_B_1-1}）．如果把分子看成球形，单分子油膜的厚度就可以认为等
 于油分子的直径．事先测出油
 滴的体积，再测出油滴在水面
 上散开的面积，就可以算出单
@@ -79,29 +80,10 @@
 了分子的直径．测定结果表明，
 分子直径的数量级是$10^{-10}$米．
 
-\begin{figure}[htp]
-\centering
-\begin{tikzpicture}[>=stealth]
-\draw (0,0)--(6,0);
-
-\foreach \x in {-.1, -.25, -.5, -1, -1.5, -2}
-{ 
-   \draw [densely dashed](0,\x)--(6,\x);
-}
-
-\foreach \y in {1,2,...,10}
-{
-   \draw (\y/2+.5,.25) circle [radius=.25];
-}
-
-\draw [thick] (5.5,0)--(7.5,0);
-\draw [thick] (5.5,.5)--(7.5,.5);
-\draw [->,thick](6.5,1.5)--(6.5,.5);
-\draw [->,thick](6.5,-1)--(6.5,0);
-
-\end{tikzpicture}
-
-\caption{水面上的单分子油膜的示意图}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/1-1.pdf}
+    \caption{水面上的单分子油膜的示意图}\label{fig_B_1-1}
 \end{figure}
 
     现在有了能放大上百万倍的离子显微镜，用它可以看到
@@ -180,18 +162,17 @@
 在简单介绍一下离子显微镜的构造和原理．
 
     离子显微镜由半径约为10厘米的球形玻璃容器和一根
-钨针组成，钨针的针尖放在容器的中心（图1.2）．针尖的表面
+钨针组成，钨针的针尖放在容器的中心（图~\ref{fig_B_1-2}）．针尖的表面
 可以看作是半径非常小的球面，近代金属加工技术可以做到
 使这个半径约为$5\times 10^{-6}$厘米．在球形容器的内表面涂上一
 薄层导电物质，象电视荧光屏那样，在快速粒子打击下可以发
 光．在导电层和针尖之何加上高电压，使导电层带负电，针尖
 带正电．
 
-\begin{figure}
-\centering
-\includegraphics[scale=.8]{fig/1-2.png}
-\caption{离子显微镜的构造原理
-}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/1-2.pdf}
+    \caption{离子显微镜的构造原理}\label{fig_B_1-2}
 \end{figure}
 
 
@@ -199,49 +180,17 @@
 与针尖上的钨原子碰撞时，由于氦原子失去电子成为正离子，
 氦离子在电力作用下就离开针尖，以很大速度沿着球半径运
 动，打到球形容器的内表面上使之发光．这样，就出现了钨针
-针尖上原子分布的图样（图1.3）．
+针尖上原子分布的图样（图~\ref{fig_B_1-3}）．
 
-\begin{figure}
-\centering
-    \begin{tikzpicture}[>=latex, scale=.8]
-\draw[dashed] (0,2) arc (90:150:2);
-\draw[dashed] (0,2) arc (90:50:2);
-\draw (0,6) arc (90:140:6);
-\draw (0,6) arc (90:70:6);
-\draw (0,0) [fill=black] circle (2.5pt)node[below]{$O$};
-\draw (90:2) [fill=black] circle (2.5pt)node[right]{$b$};
-\draw (90:6) [fill=black]circle (2.5pt)node[above]{$B$};
-\draw (110:2) [fill=black]circle (2.5pt)node[left]{$a$};
-\draw (110:6) [fill=black]circle (2.5pt)node[above]{$A$};
-
-\draw[->] (0,0)--node[below]{$R$}(130:6);
-\draw[very thick]  (0,0)--(90:6);
-\draw[very thick]    (0,0)--(110:6);
-\draw[very thick,->] (0,0)--(90:3.8);
-\draw[very thick, ->] (0,0)--(110:3.8);
-\draw [<->] (0,3) arc (90:110:3)node[right]{$\alpha$};
-\draw[->] (0,0)--node[above]{$r$}(60:2);
-
-\draw (1,4)--(90:4);
-\draw (1,4)node[right]{离子的轨迹}--(110:3.3);
-
-\draw (90:2)--(1,3)node[right]{钨原子};
-\draw (110:2)--(1,3);
-
-    \end{tikzpicture}
-\caption{计算离子显微镜的
-放大倍数，图中的
-$a$和$b$表示钨针针
-尖上的两个钨原子；
-$A$和$B$分别表示它
-们在球形容器内表
-面上的像．$R$是球
-形容器的半径，$r$表
-示针尖的半径．
-}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/1-3.pdf}
+    \caption{计算离子显微镜的放大倍数，图中的$a$和$b$表示钨针针尖上的两个钨原子；
+    $A$和$B$分别表示它们在球形容器内表面上的像．$R$是球形容器的半径，$r$表示针尖的半径．
+    }\label{fig_B_1-3}
 \end{figure}
 
-    图1.3中弧长$ab$表示相邻两个钨原子间的距离，弧长$AB$
+    图~\ref{fig_B_1-3} 中弧长$ab$表示相邻两个钨原子间的距离，弧长$AB$
 表示它们在球形容器内表面上的像之间的距离．因为$AB=R\alpha$, $ab=r\alpha$，
 所以放大倍数
 \[K=\frac{AB}{ab}=\frac{R}{r}=\frac{10{\rm cm}}{5\times 10^{-6}{\rm cm}}=2\times 10^5 \]
@@ -280,30 +229,28 @@ $A$和$B$分别表示它
 物体里的分子永不停息地做无规则运动，这个结论也是在实验事实的基础上得到的．我们在初中学过的扩散现象表明分子在不停地运动．现在我们再讲一种现象，它可以更明
 显地证实分子的无规则运动，这种现象叫做布朗运动．
 
-1827年英国植物学家布朗用显微镜观察悬浮在水中的花粉，发现花粉颗粒不停地做无规则运动，后来把颗粒的这种无规则运动叫做布朗运动．不只是花粉，悬浮在液体中的微粒，都做布朗运动，把少量墨汁用水稀释，取一滴这样的液体放在显微镜下来观察（图1.4），就可以看到碳粒做无规则
-的布朗运动，图1.5是做布朗运动的三个微粒的运动路线，从图中可以看出，布朗运动是毫无规则的．这个图只画出了
+1827年英国植物学家布朗用显微镜观察悬浮在水中的花粉，发现花粉颗粒不停地做无规则运动，后来把颗粒的这种无规则运动叫做布朗运动．不只是花粉，悬浮在液体中的微粒，都做布朗运动，把少量墨汁用水稀释，取一滴这样的液体放在显微镜下来观察（图~\ref{fig_B_1-4}），就可以看到碳粒做无规则
+的布朗运动，图~\ref{fig_B_1-5} 是做布朗运动的三个微粒的运动路线，从图中可以看出，布朗运动是毫无规则的．这个图只画出了
 每隔30秒观察到的微粒的位置，并用直线依次把这些位置连接了起来．实际上，即使在这短短的30秒内，微粒的运动也是极不规则的．
 
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.45]{fig/1-4.png}
-\caption{观察布朗运动的装置的示意图（左），
-右图是显微镜下看到的微粒
-}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/1-4.pdf}
+    \caption{观察布朗运动的装置的示意图（左），右图是显微镜下看到的微粒}\label{fig_B_1-4}
 \end{figure}
 
-\begin{figure}[htp]\centering
-	\begin{minipage}[t]{0.48\textwidth}
-		\centering
-\includegraphics[scale=1.2]{fig/1-5.pdf}
-\caption{做布朗运动的微粒的运动路线
-}
-	\end{minipage}
-	\begin{minipage}[t]{0.48\textwidth}
-		\centering
-\includegraphics[scale=1.2]{fig/1-6.pdf}
-\caption{}
-	\end{minipage}
+\begin{figure}[htbp]
+    \centering
+    \begin{minipage}[t]{0.48\textwidth}
+        \centering
+        \includegraphics{fig/B/1-5.pdf}
+        \caption{做布朗运动的微粒的运动路线}\label{fig_B_1-5}
+    \end{minipage}
+    \begin{minipage}[t]{0.48\textwidth}
+        \centering
+        \includegraphics{fig/B/1-6.pdf}
+        \caption{}\label{fig_B_1-6}
+    \end{minipage}
 \end{figure}
 
 
@@ -314,7 +261,7 @@ $A$和$B$分别表示它
 布朗运动是怎样产生的呢？起初，人们认为是由外界影响如震动、液体的对流等引起的．但是实验表明，在尽量排除外界影响的情况下布朗运动仍然存在．只要微粒足够小，在任何液体中都可以观察到布朗运动．布朗运动决不会停止．我们可以连续观察许多天甚至几个月，也看不到这种运动会停下来．
 可见布朗运动的原因不在外界，而在液体内部．
 
-甚至在显微镜下看起来是连成一片的液体，实际上也是由许许多多做不规则运动的分子组成的，悬浮在液体中的微粒不断地受到液体分子的撞击，图1.6描绘了一个微粒受
+甚至在显微镜下看起来是连成一片的液体，实际上也是由许许多多做不规则运动的分子组成的，悬浮在液体中的微粒不断地受到液体分子的撞击，图~\ref{fig_B_1-6} 描绘了一个微粒受
 到液体分子撞击的情景．当微粒足够小时，它受到的来自各个方向的液体分子的撞击作用是不平衡的．在某一瞬间，微粒在某个方向受到的撞击作用强，它就沿着这个方向运动，在下一瞬间，微粒在另一方向受到的撞击作用强，它又向着另一方向运动，这样，就引起了微粒的无规则的布朗运动．悬浮在液体中的颗粒越小，在某一瞬间跟它相撞的分子数越少，撞击作用的不平衡性就表现得越明显，因而布朗运动越明显．悬浮在液体中的颗粒越大，在某一瞬间跟它相撞的分子数越多，撞击作用的不平衡性就表现得越不明显，以至可以认为撞击
 作用相互平衡，因而布朗运动越不明显以至观察不到．
 
@@ -328,7 +275,7 @@ $A$和$B$分别表示它
 \item 有人说布朗运动就是分子的运动，这种说法对吗？为什么？
 \item 为什么悬浮在液体中的颗粒越小，它的布朗运动越明显？为什么悬浮在液体中的颗粒越大，它的布朗运动越不明显以至观察不到？
 \item 为什么说布朗运动的无规则性反映了液体内部分子运动的无规则性？设想液体内部分子的运动是有规则的，比如在任何时刻所有分子都向着某个方向运动，还能不能产生布朗运动？
-\item  图1.5中所示的不同小颗粒的布朗运动的情况并不相同，人们由此考虑到布朗运动不可能是由外界影响引起的．为什么？找几位同学一起讨论一下，并说明你的理由．
+\item  图~\ref{fig_B_1-5} 中所示的不同小颗粒的布朗运动的情况并不相同，人们由此考虑到布朗运动不可能是由外界影响引起的．为什么？找几位同学一起讨论一下，并说明你的理由．
 \end{enumerate}
 
 \section{分子间的相互作用力}
@@ -338,17 +285,25 @@ $A$和$B$分别表示它
 
 分子间有引力，而分子间又有空隙，没有紧紧吸在一起，这说明分子间还存在着斥力．面体和液体很难被压缩，即使气体，压缩到一定程度后再继续压缩也很困难，就是因为分子间存在着斥力的缘故，用力压缩物体，物体内要产生反抗压缩的弹力，就是分子间的斥力的表现．
 
-研究表明，分子间同时存在着引力和斥力，它们的大小都跟分子间的距离有关．图1.7甲中的两条虚线分别表示两个
+研究表明，分子间同时存在着引力和斥力，它们的大小都跟分子间的距离有关．图~\ref{fig_B_1-7a} 中的两条虚线分别表示两个
 分子间的引力和斥力随距离变化的情形，实线表示引力和斥力的合力即实际表现出来的分子间的作用力随距离变化的情形．我们看到，引力和斥力都随着距离的增大而减小，当两分子间的距离等于$r_0$时，分子间的引力和斥力相互平衡，分子间的作用力为零．$r_0$的数量级约为$10^{-10}$米，相当于距离为$r_0$的位置叫做平衡位置．当分子间的距离小于$r_0$时，引力和斥力虽然都随着距离的减小而增大，但是斥力增大得更快，因而分子间的作用力表现为斥力．当分子间的距离大于$r_0$时，引力和斥力虽然都随着距离的增大而减小，但是斥力
 减小得更快，因而分子间的作用力表现为引力，它随着距离的增大迅速减小，当分子间的距离的数量级大于$10^{-9}$米时，已
 经变得十分微弱，可以忽略不计了．
-\begin{figure}[htp]\centering
-	\includegraphics[scale=.85]{fig/1-7.pdf}
-	\caption{分子间的作用力跟距离的关系．图甲中斥
-力用正值来表示，引力用负值来表示．合力
-$F$为二者的代数和．合力为正值时，表示合
-力为斥力；合力为负值时，表示合力为引力．
-}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/B/1-7a.pdf}
+        \caption{}\label{fig_B_1-7a}
+    \end{subfigure}
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/B/1-7b.pdf}
+        \caption{}\label{fig_B_1-7b}
+    \end{subfigure}
+    \caption{分子间的作用力跟距离的关系．图甲中斥力用正值来表示，引力用负值来表示．合力
+    $F$为二者的代数和．合力为正值时，表示合力为斥力；合力为负值时，表示合力为引力．
+    }\label{fig_B_1-7}
 \end{figure}
 
 我们知道，分子是由原子组成的，原子内部有带正电的原子核和带负电的电子．分子间这样复杂的作用力就是由这些带电粒子的相互作用引起的．
@@ -360,7 +315,7 @@ $F$为二者的代数和．合力为正值时，表示合
 	\item 什么事例说明分子间有引力？什么事例说明分子间有斥力？
 	\item 当分子间的距离大于$r_0$时，随着距离的增大，引力和斥力哪个减小得快？当分子间的距离小于$r_0$时，随着距离的减小，引力和斥力哪个增加得快？
 	\item 物体为什么能够被压缩，但又不能无限地被压缩？
-\item	从图1.7看出，当分子中心间的距离小于$r_0$时，分
+\item	从图~\ref{fig_B_1-7} 看出，当分子中心间的距离小于$r_0$时，分
 子间的作用力表现为斥力，它随着距离的减小而很快地增大．分子间作用力的这一特点，可以借助于下述模型想象出来．设想分子为弹性钢球，当两个钢球相撞时，它们都发生微小的形变，因而在它们之间产生相互推斥的弹力，如同分子间的作用力表现为斥力一样．钢球发生微小形变就可以产生很大的弹力，所以这个弹力随着钢球中心间距离的减小而很快地增大．利用这一模型可以粗略地估计出分子直径的数量级为$10^{-10}$米．这是怎样估计的？
 
 \end{enumerate}
@@ -370,17 +325,8 @@ $F$为二者的代数和．合力为正值时，表示合
 \item 分子运动论的基本内容是什么？
 \item 就你所知道的，测定分子的大小和阿伏伽德罗常数有什么方法？
 \item 什么叫布朗运动？布朗运动是怎样产生的？为什么把大量分子的无规则运动叫做热运动？
-\item 仔细研究图1.7，说明分子间作用力的特点．
+\item 仔细研究图~\ref{fig_B_1-7} ，说明分子间作用力的特点．
 \end{enumerate}
-
-
-
-
-
-
-
-
-
 
 
 
