--- a/physics.tex
+++ b/physics.tex
@@ -58,7 +58,7 @@
 	%\mainmatter
 	
 	%正文内容
-	%\include{1/B/01} %分子运动论基础
+	\include{1/B/01} %分子运动论基础
 	%\include{1/B/02} %内能 能的转化和守恒定律
 	%\include{1/B/03} %气体的性质
 	%\include{1/B/04} %固体和液体的性质
@@ -72,6 +72,7 @@
 	
 	%\appendix
 	%\include{1/B/app_03} %附录
+	
 	
 \end{document}
 
