--- a/1/B/02.tex
+++ b/1/B/02.tex
@@ -1,8 +1,8 @@
+\chapter{内能~~能的转化和守恒定律}\label{chapter-internal-energy-and-laws-of-conversion-and-conservation-of-sssenergy}
 
-\chapter{内能~~能的转化和守恒定律}
 
 \section{物体的内能}
-\subsection{分子的动能~~温度} 
+\subsection{分子的动能~~温度}
 既然组成物体的分子不停地做无规则运动，那么，象一切运动着的物体一样，做热运动的分子也具有动能．
 
 物体里分子运动的速率是不同的，有的大，有的小，因此各个分子的动能并不相同、在热现象的研究中，我们所关心的不是物体里每个分子的动能，而是所有分子的动能的平均值．这个平均值叫做分子热运动的平均动能．
@@ -13,7 +13,7 @@
 
 分子间存在相互作用力，因此分子间具有由它们的相对位置决定的势能，这就是分子势能．
 
-分子间的距离大于$r_0$（见图1.7）的时候，分子间的相互作用表现为引力，要增大分子间的距离必须克服引力做功，因此分子势能随着分子间的距离的增大而增大．这种情形同弹簧被拉长时弹性势能的变化相似．分子间的距离小于$r_0$的
+分子间的距离大于$r_0$（见图~\ref{fig_B_1-7}）的时候，分子间的相互作用表现为引力，要增大分子间的距离必须克服引力做功，因此分子势能随着分子间的距离的增大而增大．这种情形同弹簧被拉长时弹性势能的变化相似．分子间的距离小于$r_0$的
 时候，分子间的相互作用表现为斥力，要减小分子间的距离必须克服斥力做功，因此分子势能随着分子间的距离减小而增大．这种情形同弹簧被压缩时弹性势能的变化相似．
 
 物体的体积发生变化时，分子间的距离也发生变化，因而分子势能随着发生变化．可见分子势能跟物体的体积有关系．
@@ -44,7 +44,7 @@
 
 \subsection*{练习一}
 \begin{enumerate}
-	\item 壶里的水被加热而温度升高，水的内能怎样改变？液体的热膨胀很小，可不予考虑．
+\item 壶里的水被加热而温度升高，水的内能怎样改变？液体的热膨胀很小，可不予考虑．
 \item 一根烧红了的铁棍逐渐冷却下来，铁棍的内能怎样改变？固体的热膨胀很小，可不予考虑．
 \item 容器里装着一定质量的气体，在保持体积不变的条件下使它的温度升高，气体的内能怎样改变？在保持温度不变的条件下把气体压缩，气体的内能怎样改变？
 \item 设想我们对固体进行压缩．当分子间的距离小于$r_0$时，随着固体被压缩分子势能怎样改变？
@@ -57,12 +57,12 @@
 做功可以改变物体的内能．用锯条锯木头，我们克服摩
 擦力做了功，锯条和木头的温度升高，内能增加．这类所谓摩擦生热的现象，是大家都知道的．物体在非弹性碰撞中做功，可以使它们的温度升高，内能增加，用搅拌器在水中搅拌做功，可以使水的温度升高，内能增加．气体被压缩或膨胀时做功，气体的内能就发生变化，在
 一个厚壁玻璃筒里放一块浸过
-乙醚的棉花，迅速压下活塞对筒内空气做功，空气的内能增加，温度升高，达到乙醚的着火点，浸了乙醚的棉花就燃烧起来（图2.1).柴油机就是利用这个道理来点火，使喷入气缸内的雾状柴油燃烧的．热机气缸内高温高压的气体膨胀时做功，气体的温度降低，内能减少．热机就是利用这个道理对外做功的．
+乙醚的棉花，迅速压下活塞对筒内空气做功，空气的内能增加，温度升高，达到乙醚的着火点，浸了乙醚的棉花就燃烧起来（图~\ref{fig_B_2-1}).柴油机就是利用这个道理来点火，使喷入气缸内的雾状柴油燃烧的．热机气缸内高温高压的气体膨胀时做功，气体的温度降低，内能减少．热机就是利用这个道理对外做功的．
 
-\begin{figure}[htp]
-\centering\includegraphics[scale=.45]{fig/2-1.png}
-\caption{压缩气体做功，气体内能增加
-}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/2-1.pdf}
+    \caption{压缩气体做功，气体内能增加}\label{fig_B_2-1}
 \end{figure}
 
 但做功并不是改变物体内能的唯一方式．灼热的火炉使它上面和周围的物体温度升高，这些物体的内能增加，火炉熄灭后，这些物体的温度降低，内能又减少，在这样的过程中，物体的内能改变了，但是并没有做功，这种没有做功而使物体内能改变的物理过程叫做\textbf{热传递}．
@@ -79,12 +79,22 @@
 \section{热功当量}
 既然做功和热传递对改变物体的内能是等效的，功和热量都可以用来量度内能的变化，那么功和热量之间就应该有确定的数量关系．
 
-我们在初中学过，热量的单位是卡，使1克水的温度升高1$^\circ$C所需的热量就是1卡．如果功和热量之间有确定的数量关系，1卡的热量相当于多少焦耳的功？相当于单位热量的功的数值叫做\textbf{热功当量}．历史上第一个用实验来测定热功当量的人是英国物理学家焦耳．他用各种不同的方法测定了热功当量，下面我们介绍其中最著名的一种（图2.2）.
+我们在初中学过，热量的单位是卡，使1克水的温度升高1$^\circ$C所需的热量就是1卡．如果功和热量之间有确定的数量关系，1卡的热量相当于多少焦耳的功？相当于单位热量的功的数值叫做\textbf{热功当量}．历史上第一个用实验来测定热功当量的人是英国物理学家焦耳．他用各种不同的方法测定了热功当量，下面我们介绍其中最著名的一种（图~\ref{fig_B_2-2}）.
 
-\begin{figure}[htp]
-\centering\includegraphics[scale=.8]{fig/2-2.pdf}
-\caption{左图是焦耳测定热功当量的装置；
-右图是量热器的纵截面图．}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/B/2-2a.pdf}
+        \caption{}\label{fig_B_2-2a}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/B/2-2b.pdf}
+        \caption{}\label{fig_B_2-2b}
+    \end{subfigure}
+    \caption{左图是焦耳测定热功当量的装置；右图是量热器的纵截面图．}\label{fig_B_2-2}
 \end{figure}
 
 
@@ -109,7 +119,7 @@ $$W=2Mgh $$
 \item 锅炉中盛有150千克的水，由20$^\circ$C加热到100$^\circ$C，水的内能增加多少？
 \item 一个物体的内能增加了20焦．如果物体跟周围环境不发生热交换，周围环境需要对物体做多少焦的功？如果周围环境对物体没有做功，需要传给物体多少焦的热量？
 \item 设想在测定热功当量的不同实验中得到的结果并不相同，还能不能得到结论说：做功和热传递对改变物体的内能是等效的？讨论一下这个问题．
-\item 在图2.2所示的实验中，已知重物$P$和$P'$的质量都是14千克，水的质量是7千克，重物连续从2米高处落下20次后，水的温度升高0. 37$^\circ$C．不考虑传给量热器和外界的热量，试根据这些数据计算热功当量．
+\item 在图~\ref{fig_B_2-2} 所示的实验中，已知重物$P$和$P'$的质量都是14千克，水的质量是7千克，重物连续从2米高处落下20次后，水的温度升高0. 37$^\circ$C．不考虑传给量热器和外界的热量，试根据这些数据计算热功当量．
 \end{enumerate}
 
 
@@ -130,7 +140,7 @@ $$W=2Mgh $$
 
 \subsection{能的转化和守恒定律} 
 现在我们从能的转化的观点来考察热力学第一定律．我们知道，功是能的转化的量度，做功使内能发生变化时，其他形式的能和内能发生相互转化．在摩擦生热的现象中，克服摩擦力做多少功，就有多少机械能转
-化成等量的内能．在图2.1所示的压缩气体做功的过程中，做多少功，就有多少机械能转化成等量的内能．气体膨胀做功的时候，做多少功，就有多少内能转化成等量的机械能．热传递使内能发生变化时，只是内能在物体之间的转移，而没有能量形式的转化．一个物体从外界吸收了多少热量，就有多少内能从外界转移给这个物体．这里我们看到，做功和热传递对改变物体的内能虽然等效，但从能的转化的观点来看却是有区别的，热力学第一定律表示，做功和热传递提供给一个物体多少能量，物体的内能就增加多少，能量在转化或转移中守恒．
+化成等量的内能．在图~\ref{fig_B_2-1} 所示的压缩气体做功的过程中，做多少功，就有多少机械能转化成等量的内能．气体膨胀做功的时候，做多少功，就有多少内能转化成等量的机械能．热传递使内能发生变化时，只是内能在物体之间的转移，而没有能量形式的转化．一个物体从外界吸收了多少热量，就有多少内能从外界转移给这个物体．这里我们看到，做功和热传递对改变物体的内能虽然等效，但从能的转化的观点来看却是有区别的，热力学第一定律表示，做功和热传递提供给一个物体多少能量，物体的内能就增加多少，能量在转化或转移中守恒．
 
 不但机械能，其他形式的能也可以和内能相互转化．通过电流的导线变热，电能转化成内能．燃料燃烧生热，化学能转化成内能，炽热的灯丝发光，内能转化成光能，实验证明，在这种转化中能量也守恒．
 
@@ -150,8 +160,8 @@ $$W=2Mgh $$
 界做功必须消耗能量，不消耗能量便无法对外界做功，因而永动机不可能制成．我们利用自然，必须遵循自然界的规律，违反这种规律，就要失败．制造永动机只能是一种永远无法实现的幻想．
 
 \begin{example}
-	一定量的气体从外界吸收热量$6.36\times 10^4$卡，
-内能增加$4.25\times 10^5$焦，气体对外界做了功，还是外界对气体做了功？做多少功？	
+    一定量的气体从外界吸收热量$6.36\times 10^4$卡，
+内能增加$4.25\times 10^5$焦，气体对外界做了功，还是外界对气体做了功？做多少功？    
 \end{example}
 
 \begin{solution}
@@ -168,13 +178,13 @@ $W$为正值，表示外界对气体做了$1.59\times 10^5$焦的功．
 
 \subsection*{练习三}
 \begin{enumerate}
-		\item 做功和热传递对改变物体的内能虽然等效，但从能的转化的观点来看是有区别的，这种区别是什么？
-	\item 在图2.2所示的焦耳测定热功当量的实验中，什么其他形式的能转化成了水的内能？在历史上，热功当量的确定为建立能的转化和守恒定律提供了坚实的实验基础．你怎样理解这句话？讨论一下这个问题．
-	\item 用活塞压缩气缸里的空气，对空气做了900焦的功，同时气缸向外散热210焦．空气的内能改变了多少？
-	\item 空气压缩机在一次压缩中，活塞对空气做了$2\times 10^5$焦的功，同时空气的内能增加$1.5\times 10^5$焦．这时空气向外界传递的热量是多少？
-	\item 如果用$Q$表示物体吸收的热量，用$W$表示物体对外界所做的功，热力学第一定律也可以表达为下式：
-	\[Q=\Delta E+W\]
-	怎样解释这个表达式的物理意义？试根据课文中的表达式推
+\item 做功和热传递对改变物体的内能虽然等效，但从能的转化的观点来看是有区别的，这种区别是什么？
+\item 在图~\ref{fig_B_2-2} 所示的焦耳测定热功当量的实验中，什么其他形式的能转化成了水的内能？在历史上，热功当量的确定为建立能的转化和守恒定律提供了坚实的实验基础．你怎样理解这句话？讨论一下这个问题．
+\item 用活塞压缩气缸里的空气，对空气做了900焦的功，同时气缸向外散热210焦．空气的内能改变了多少？
+\item 空气压缩机在一次压缩中，活塞对空气做了$2\times 10^5$焦的功，同时空气的内能增加$1.5\times 10^5$焦．这时空气向外界传递的热量是多少？
+\item 如果用$Q$表示物体吸收的热量，用$W$表示物体对外界所做的功，热力学第一定律也可以表达为下式：
+\[Q=\Delta E+W\]
+怎样解释这个表达式的物理意义？试根据课文中的表达式推
 导出这个表达式．
 \end{enumerate}
 
@@ -211,9 +221,10 @@ $W$为正值，表示外界对气体做了$1.59\times 10^5$焦的功．
 
 电能便于输送，但是远距离输电按目前的技术水平能量损失也不小．各种用电设备的效率虽然比较高，但都有能量损失，因此，提高电能输送和用电设备的效率也是节能的重要措施．
 
-\begin{figure}[htp]
-\centering\includegraphics[scale=.6]{fig/2-3.pdf}
-\caption{能源能量的转化和利用}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/2-3.pdf}
+    \caption{能源能量的转化和利用}\label{fig_B_2-3}
 \end{figure}
 
 现在人类社会使用的能源主要是煤、石油和天然气．但是煤、石油、天然气的储量是有限的，因此在合理开发和有效利用煤、石油、天然气等常规能源的同时，要不断探索能的转
@@ -231,13 +242,13 @@ $W$为正值，表示外界对气体做了$1.59\times 10^5$焦的功．
 \subsection*{练习四}
 
 \begin{enumerate}
-	\item 试说明下列现象中能量是怎样转化的：
-	\begin{enumerate}
-		\item 在水平公路上行驶的汽车，发动机熄火之后，速度越来越小，最后停止．
-		\item 在阻尼振动中，单摆的振幅越来越小，最后停下来．
-		\item 火药爆炸产生燃气，子弹在燃气的推动下从枪膛发射出去，射穿一块钢板，速度减小．
-		\item 用柴油机带动发电机发电，供给电动水泵抽水，把水从低处抽到高处．
-	\end{enumerate}
+\item 试说明下列现象中能量是怎样转化的：
+\begin{enumerate}
+    \item 在水平公路上行驶的汽车，发动机熄火之后，速度越来越小，最后停止．
+    \item 在阻尼振动中，单摆的振幅越来越小，最后停下来．
+    \item 火药爆炸产生燃气，子弹在燃气的推动下从枪膛发射出去，射穿一块钢板，速度减小．
+    \item 用柴油机带动发电机发电，供给电动水泵抽水，把水从低处抽到高处．
+\end{enumerate}
 
 \item 取一个不高的横截面积是30${\rm cm^2}$的圆筒，筒内装水0.6千克，用来测量射到地面的太阳能，在太阳光垂直照射2分钟后，水的温度升高了1$^\circ$C．计算在阳光直射下地球表面每平方厘米每分钟获得的能量．
 \item 从20米高处落下的水，如果水的势能的20\%用来使水的温度升高，水落下后的温度升高多少摄氏度？
@@ -249,20 +260,12 @@ $W$为正值，表示外界对气体做了$1.59\times 10^5$焦的功．
 
 \section*{复习题}
 \begin{enumerate}
-	\item 从分子运动论的观点看来，温度标志着什么？什么是分子的动能？什么是分子势能？什么是物体的内能？物体的内能跟什么有关系？
-	\item 改变物体的内能有哪两种方式？从能的转化的观点来看，它们有什么区别？
+\item 从分子运动论的观点看来，温度标志着什么？什么是分子的动能？什么是分子势能？什么是物体的内能？物体的内能跟什么有关系？
+\item 改变物体的内能有哪两种方式？从能的转化的观点来看，它们有什么区别？
 \item 什么是热功当量？热功当量的测定在物理学的发展中有什么重要意义？
 \item 热力学第一定律的内容是什么？写出它的数学表达式．
 \item 能的转化和守恒定律的内容是什么?这个定律有什么重要意义？
 \end{enumerate}
-
-
-
-
-
-
-
-
 
 
 
