--- a/physics.tex
+++ b/physics.tex
@@ -60,8 +60,8 @@
 	%正文内容
 	%\include{1/B/01} %分子运动论基础
 	%\include{1/B/02} %内能 能的转化和守恒定律
-	\include{1/B/03} %气体的性质
-	%\include{1/B/04} %固体和液体的性质
+	%\include{1/B/03} %气体的性质
+	\include{1/B/04} %固体和液体的性质
 	%\include{1/B/05} %物态变化
 	%\include{1/B/06} %电场
 	%\include{1/B/07} %稳恒电流
