--- a/physics.tex
+++ b/physics.tex
@@ -61,8 +61,8 @@
 	%\include{1/B/01} %分子运动论基础
 	%\include{1/B/02} %内能 能的转化和守恒定律
 	%\include{1/B/03} %气体的性质
-	\include{1/B/04} %固体和液体的性质
-	%\include{1/B/05} %物态变化
+	%\include{1/B/04} %固体和液体的性质
+	\include{1/B/05} %物态变化
 	%\include{1/B/06} %电场
 	%\include{1/B/07} %稳恒电流
 	%\include{1/B/08} %物质的导电性
