--- a/1/B/05.tex
+++ b/1/B/05.tex
@@ -1,6 +1,5 @@
+\chapter{物态变化}\label{chapter-change-of-state-of-matter}
 
-
-\chapter{物态变化}
 固体、液体和气体是通常存在的三种物质状态．在一定条件下，这三种物质状态可以相互转化，即发生物态变化，水结成冰或变成水蒸气就是常见的物态变化的例子．物态变化跟日常生活和工农业生产有密切关系，有许多实际应用，在初中我们学过一些物态变化的知识，这一章进一步扩大和加深这方面的知识，同时学习一些新知识．
 
 \section{熔解和凝固}
@@ -21,24 +20,26 @@
 物质的熔点跟压强有关系，熔解时体积膨胀的物质，如果所受的压强增大，熔解将受到阻碍，只有在更高的温度下才
 能熔解，所以熔点升高，熔解时体积缩小的物质，如果所受的压强增大，会促进熔解的进行，所以熔点降低．冰在熔解时体积缩小，因而冰在受到巨大的压强时，在0$^\circ$C以下也能熔解．不过压强对熔点的影响并不显著，例如，每增如1标准大气压，冰的熔点才降低0.0075$^\circ$C．
 
-下表列出了几种物质在1标准大气压下的熔点．
+表~\ref{tab_B_5-1} 列出了几种物质在1标准大气压下的熔点．
 
-\begin{center}
-    \begin{tabular}{cccc}
-\hline
-物质 & 熔点（$^\circ$C） & 物质 & 熔点（$^\circ$C） \\
-\hline
-氦 & $-$272 & 铅 & 327\\
-氢& $-$259 & 铝 & 660\\
-酒精& $-$117 & 银 & 962\\
-氨& $-$77.7 & 金 & 1064\\
-水银& $-$39 & 铜 & 1083\\
-冰& 0 & 铁 & 1535\\
-萘&80 & 钨 & 3410\\
-锡&232   & 碳 & 3550\\
-\hline
-  &  \end{tabular}
-\end{center}
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_B_5-1}
+	\begin{tabular}{cccc}
+	\toprule
+	物质 & 熔点（$^\circ$C） & 物质 & 熔点（$^\circ$C） \\
+	\midrule
+	氦 & $-$272 & 铅 & 327\\
+	氢& $-$259 & 铝 & 660\\
+	酒精& $-$117 & 银 & 962\\
+	氨& $-$77.7 & 金 & 1064\\
+	水银& $-$39 & 铜 & 1083\\
+	冰& 0 & 铁 & 1535\\
+	萘&80 & 钨 & 3410\\
+	锡&232   & 碳 & 3550\\
+	\bottomrule
+	\end{tabular}
+\end{table}
 
 一般说来，纯物质中掺进另一种物质，熔点要降低．例如
 海水比淡水的熔点低．冰和食盐的混合物，熔点可以降低到零下二十多摄氏度，冰和氯化钙的混合物，熔点可以降低到零下五十多摄氏度．
@@ -55,22 +56,24 @@
 
 液体凝固时要放出热量．单位质量的某种物质凝固时放出的热量等于它的熔解热．显然这是符合能量守恒定律的．
 
-物质的熔点跟压强有关系，在不同的熔解温度下，物质的熔解热也略有不同．下表列出了几种物质在1标准大气压下的熔解热．
+物质的熔点跟压强有关系，在不同的熔解温度下，物质的熔解热也略有不同．表~\ref{tab_B_5-2} 列出了几种物质在1标准大气压下的熔解热．
 
-\begin{center}
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_B_5-2}
     \begin{tabular}{cccc}
-  \hline
+  \toprule
  物质 & 熔解热（${\rm J}/{\rm kg}$） & 物质 & 熔解热（${\rm J}/{\rm kg}$） \\
-  \hline
+  \midrule
   铝 & $3.96\times 10^5$ & 萘 & $1.51\times 10^5$\\
   冰& $3.35\times 10^5$ & 锡 & $0.6\times 10^5$\\
   镍& $2.99\times 10^5$ & 铅 & $0.25\times 10^5$\\
    铁& $2.67\times 10^5$ & 水银 & $0.11\times 10^5$\\
   铜& $2.05\times 10^5$ & 二氧化碳 & $1.81\times 10^5$\\
    钨& $1.92\times 10^5$ & 金 & $0.64\times 10^5$\\
-    \hline
+    \bottomrule
    \end{tabular}
-\end{center}
+\end{table}
 
 熔解热常用字母$\lambda$表示．知道了熔解热，就可以算出质量为$m$的物质熔解时吸收的热量$Q$：
 \[Q=\lambda m \]
@@ -96,15 +99,14 @@
 
 \begin{enumerate}
     \item 把玻璃放在火上加热，观察它的熔解情况，看看玻璃是不是先变软，再流动．玻璃是不是晶体？
-    \item 解释下面的现象：把一块冰放在支承物上（图5.1），
+    \item 解释下面的现象：把一块冰放在支承物上（图~\ref{fig_B_5-1}），
     将两端各挂一个重物的铁丝搭在冰块上．过一段时间后可以看到，铁丝切进冰块，但是铁丝穿过冰块的地方并没有留下切口，冰仍然是完整的一块，铁丝
     为什么能切进冰块？铁丝穿过后上面的冰为什么又成了完整的一块？如果有条件，自己做这个实验．
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.5]{fig/5-1.png}
-\caption{细铁丝穿过冰块而不留下切口
-}
-\end{figure}
+    \begin{figure}[htbp]
+      \centering
+      \includegraphics{fig/B/5-1.pdf}
+      \caption{细铁丝穿过冰块而不留下切口}\label{fig_B_5-1}
+    \end{figure}
     \item   冬季在菜窖里放上几桶水，可以使窖内的温度不致降低得很多，防止把菜冻坏．这是什么道理？如果在窖内放入200千克10$^\circ$C的水，试计算这些水结成0$^\circ$C的冰时放出的热量．这相当于燃烧多少千克干木柴所放出的热量？干木柴的
     燃烧值约为$1.26\times 10^4$千焦/千克．
 \item  铜制量热器小简的质量是160克，装入200克20$^\circ$C的水．向水里放进30克0$^\circ$C的冰，冰完全熔解后水的温度是多少摄氏度？
@@ -131,14 +133,14 @@
 
 \section{饱和汽与饱和汽压}
 \subsection{饱和汽} 
-装在敞口容器里的液体，由于蒸发出来的汽分子能够分散到周围空间里去，所以过一段时间后液体会全部蒸发完，盛在密闭容器里的液体，即使过很长时间，也不会蒸发完，这是什么原因呢？原来在容器中的液面上同时进行着两种相反的过程：一方面分子从液面飞出来；另一方面由于液面上的汽分子不停地做无规则的热运动，有的汽分子撞到液面上又会回到液体中去（图5.2）．在密闭的容器中，随着液体的
+装在敞口容器里的液体，由于蒸发出来的汽分子能够分散到周围空间里去，所以过一段时间后液体会全部蒸发完，盛在密闭容器里的液体，即使过很长时间，也不会蒸发完，这是什么原因呢？原来在容器中的液面上同时进行着两种相反的过程：一方面分子从液面飞出来；另一方面由于液面上的汽分子不停地做无规则的热运动，有的汽分子撞到液面上又会回到液体中去（图~\ref{fig_B_5-2}）．在密闭的容器中，随着液体的
 不断蒸发，液面上汽的密度不断增大，回到液体中的分于数也逐渐增多，最后，当汽的密度增大到一定程度时，就会达到这样的状态：在单位时间内回到液体中的分子数等于从液面飞出去的分子数．这时汽的密度不再增大，液体也不再减少，
 液体和汽之间达到了平衡状态，这种平衡叫做\textbf{动态平衡}．我们把跟液体处于动态平衡的汽叫做\textbf{饱和汽}．把没有达到饱和状态的汽叫做\textbf{未饱和汽}．在一定温度下，饱和汽的密度是一定的，未饱和汽的密度小于饱和汽的密度．
 
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.5]{fig/5-2.png}
-\caption{}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{fig/B/5-2.pdf}
+  \caption{}\label{fig_B_5-2}
 \end{figure}
 
 饱和汽的密度随着温度而改变．温度升高时，液体分于的平均动能增大，单位时间里从液面飞出的分子数增多，原来的动态平衡被破坏，液体就继续蒸发，汽的密度继续增大，直
@@ -146,43 +148,25 @@
 
 \subsection{饱和汽压} 
 
-某种液体的饱和汽所具有的压强，叫做这种液体的饱和汽压．用下面的实验可以测量饱和汽压．把两根装满水银的细长玻璃管倒立在水银槽中（图5.3）．$a$管用作气压计．用弯曲玻璃管向$b$管中注入一些乙醚．乙醚的密度比水银小，便浮到水银面上，并在水银面上方的真空中蒸发，
+某种液体的饱和汽所具有的压强，叫做这种液体的饱和汽压．用下面的实验可以测量饱和汽压．把两根装满水银的细长玻璃管倒立在水银槽中（图~\ref{fig_B_5-3}）．$a$管用作气压计．用弯曲玻璃管向$b$管中注入一些乙醚．乙醚的密度比水银小，便浮到水银面上，并在水银面上方的真空中蒸发，
 同时$b$管中的水银面开始下降，当乙醚汽的密度达到饱和时，水银面上还剩有一点乙醚，$b$管中的水银面就稳定在一定的高度不再下降．$a$、$b$两管中水银面的高度差$h$就表示乙醚饱和汽压的大小．如果不用乙醚，而是向$b$管中注入水或酒精，就可以测出水或酒精的饱和汽压．
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.5]{fig/5-3.png}
-\caption{测量饱和汽的压强
-}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{fig/B/5-3.pdf}
+  \caption{测量饱和汽的压强}\label{fig_B_5-3}
 \end{figure}
 
 实验表明，在相同的温度下，不同液体的饱和汽压一般是不同的．挥发性大的液体，饱和汽压大．例如，20$^\circ$C时，乙醚的饱和汽压为440毫米汞柱，水为18毫米汞柱，水银的饱和汽压很小，20$^\circ$C时仅为0.0012毫米汞柱．所以水银气压计水银柱上方的空间可以认为是真空．
 
 \subsection{饱和汽压跟温度的关系} 
 
-用热毛巾把图5.3中的$b$管包住，使管内的温度升高，可以看到管中的水银面下降．这表示温度升高时饱和汽压增大．如果使管内的温度降低，管中的水银面就上升，表示温度降低时饱和汽压减小．可见，\textit{饱和汽压随温度的升高而增大，随温度的降低而减小．}
+用热毛巾把图~\ref{fig_B_5-3} 中的$b$管包住，使管内的温度升高，可以看到管中的水银面下降．这表示温度升高时饱和汽压增大．如果使管内的温度降低，管中的水银面就上升，表示温度降低时饱和汽压减小．可见，\textit{饱和汽压随温度的升高而增大，随温度的降低而减小．}
 
-饱和汽压随温度的升高而增大，这是由两方面的原因引起的，一个原因是温度升高时，饱和汽的密度增大，因此压强增大，另一个原因是温度升高时，汽分子热运动的平均速率增大，这也使得压强增大．图5.4是水的饱和汽压与温度的关系图线．从图线可以看出，温度升高时，饱和汽压增大，但是饱和汽压与温度的关系不是线性的，饱和汽压随温度的升高增大得很快．
-\begin{figure}[htp]\centering
-	\begin{tikzpicture}[>=stealth, scale=1.1,domain=0:5.5]
-
-\draw[<->] (0,5)node [right]{$P$（mmHg）}--(0,0)--(6,0)node [right]{$t$（$^\circ$C）};
-
-\foreach \x in{1,2,3,4}
-{
-   \draw(0,\x)--(.2, \x);
-}
-\foreach \x in{1,2,3,4,5}
-{
-   \draw(\x,0)--(\x, .2);
-}
-
-\node at (-.3,1){200};\node at (-.3,2){400};\node at (-.3,3){600};\node at (-.3,4){800};
-\node at (1,-.3){20};\node at (2,-.3){40};\node at (3,-.3){60};\node at (4,-.3){80};\node at (5,-.3){100};\node at (0,-.3){0};
-
-\draw[color=black, ultra thick] plot (\x,{0.025*\x*\x*\x}) ;
-
-\end{tikzpicture}
-\caption{水的饱和汽压与温度的关系图线}
+饱和汽压随温度的升高而增大，这是由两方面的原因引起的，一个原因是温度升高时，饱和汽的密度增大，因此压强增大，另一个原因是温度升高时，汽分子热运动的平均速率增大，这也使得压强增大．图~\ref{fig_B_5-4} 是水的饱和汽压与温度的关系图线．从图线可以看出，温度升高时，饱和汽压增大，但是饱和汽压与温度的关系不是线性的，饱和汽压随温度的升高增大得很快．
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{fig/B/5-4.pdf}
+  \caption{水的饱和汽压与温度的关系图线}\label{fig_B_5-4}
 \end{figure}
 
 饱和汽压随温度的降低而减小，其原因同学们可以自己分析一下．
@@ -190,18 +174,33 @@
 \subsection{饱和汽压跟体积的关系} 
 
 现在我们用实验来研究饱和汽
-压跟体积的关系．象图5.5那样，把水银倒在一个深的容器里，再把装满水银的玻璃管倒立在这个容器中．向玻璃管里移入一些乙醚，使乙醚蒸发后水银面上还留有少量液态乙醚．这时管内乙醚的饱和汽压等于$p_0-p_k$（图5.5甲），其中$p_0$是大气压强．
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.45]{fig/5-5.png}
-\caption{饱和汽压跟体积无关
-}
+压跟体积的关系．象图~\ref{fig_B_5-5} 那样，把水银倒在一个深的容器里，再把装满水银的玻璃管倒立在这个容器中．向玻璃管里移入一些乙醚，使乙醚蒸发后水银面上还留有少量液态乙醚．这时管内乙醚的饱和汽压等于$p_0-p_k$（图~\ref{fig_B_5-5a}），其中$p_0$是大气压强．
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.3\linewidth}
+        \centering
+        \includegraphics{fig/B/5-5a.pdf}
+        \caption{}\label{fig_B_5-5a}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.3\linewidth}
+        \centering
+        \includegraphics{fig/B/5-5b.pdf}
+        \caption{}\label{fig_B_5-5b}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.3\linewidth}
+        \centering
+        \includegraphics{fig/B/5-5c.pdf}
+        \caption{}\label{fig_B_5-5c}
+    \end{subfigure}
+    \caption{饱和汽压跟体积无关}\label{fig_B_5-5}
 \end{figure}
 
-现在把管子往上提高一些，使水银面上乙醚汽的体积增大（图5.5乙），可以看到，水银面上的液态乙醚减少了，
+现在把管子往上提高一些，使水银面上乙醚汽的体积增大（图~\ref{fig_B_5-5b}），可以看到，水银面上的液态乙醚减少了，
 但是管里水银柱的高度还跟原来一样．这表明，在温度不变的情况下，体积增大时饱和汽压不改变．
 
-把提高的管子放下一些，使乙醚汽的体积减小（图5.5丙）． 这时水银面上的液态乙醚增多，但是管中水银柱的高度仍保持不变．这表明，在温度不变的情况下，体积减小时饱和汽压也不改变．
+把提高的管子放下一些，使乙醚汽的体积减小（图~\ref{fig_B_5-5c}）． 这时水银面上的液态乙醚增多，但是管中水银柱的高度仍保持不变．这表明，在温度不变的情况下，体积减小时饱和汽压也不改变．
 
 在温度不变的情况下，饱和汽的压强不随体积而变化，可作如下的解释：当体积增大时，容器中汽的密度减小，原来的饱和汽变成了未饱和汽，于是液体继续蒸发，直到未饱和汽成为饱和汽为止；由于温度没有改变，新的饱和汽的密度跟原来的一样，汽分子热运动的平均速率也跟原来一样，所以压强不
 改变．体积减小时，容器中汽的密度增大，回到液体中的分子数多于从液面飞出的分子数，于是一部分汽变成液体，直到汽的密度减小到等于该温度下饱和汽的密度为止；由于温度跟原来相同，饱和汽的密度不变，汽分子热运动的平均速率也跟原来相同，所以压强也不改变．
@@ -212,7 +211,7 @@
 \subsection*{练习二}
 
 \begin{enumerate}
-    \item 举出几个蒸发致冷的例子来，
+\item 举出几个蒸发致冷的例子来，
 \item 液面上的汽达到饱和时，还有没有液体分子从液面飞出？为什么这时从宏观上看来液体不再蒸发？
 \item 饱和汽的密度怎样随温度而变化？饱和汽的压强怎祥随温度而变化？为什么这样变化？
 \item 在温度不变的情况下，增大液面上饱和汽的体积时，下面的说法哪些是正确的：
@@ -231,24 +230,34 @@
 \section{沸腾}
 给液体加热，当液体升高到一定温度时，液体内部涌现出大量的气泡，升到液面破裂开，放出汽．这时整个液体发生剧烈的汽化，这种现象叫做\textbf{沸腾}．
 
-现在我们来研究一下水的沸腾过程，给盛水的烧杯加热，原来吸附在杯底和杯壁上的空气以及溶解在水里的空气就分离出来，形成一些小气泡．由于周围的水向气泡里蒸发，所以气泡里包含的是饱和水汽和空气．杯底受热温度升高时，气泡膨胀，当体积胀大到一定程度时，气泡就脱离杯底浮起．在达到沸腾温度以前，气泡在上升过程中体积是逐渐缩小的（图5.6甲），这些小气泡升到液面破裂时，放出的主要是空气．
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.45]{fig/5-6.png}
-\caption{}
+现在我们来研究一下水的沸腾过程，给盛水的烧杯加热，原来吸附在杯底和杯壁上的空气以及溶解在水里的空气就分离出来，形成一些小气泡．由于周围的水向气泡里蒸发，所以气泡里包含的是饱和水汽和空气．杯底受热温度升高时，气泡膨胀，当体积胀大到一定程度时，气泡就脱离杯底浮起．在达到沸腾温度以前，气泡在上升过程中体积是逐渐缩小的（图~\ref{fig_B_5-6a}），这些小气泡升到液面破裂时，放出的主要是空气．
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/B/5-6a.pdf}
+        \caption{}\label{fig_B_5-6a}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/B/5-6b.pdf}
+        \caption{}\label{fig_B_5-6b}
+    \end{subfigure}
+    \caption{}\label{fig_B_5-6}
 \end{figure}
 
 当杯内水的温度都升高到某一温度，气泡内的饱和汽压等于外界压强时，气泡在上升过程中体积就不再缩小．并且
-由于在上升过程中周围的水还在不断向泡内蒸发，所以体积还会继续增大，直到升到液面破裂开（图5.6乙）．这时从气泡里放出的主要是水蒸气，这时水就沸腾了．沸腾时，在液体表面和液体内部同时发生汽化，这是沸腾和蒸发的主要区别．
+由于在上升过程中周围的水还在不断向泡内蒸发，所以体积还会继续增大，直到升到液面破裂开（图~\ref{fig_B_5-6b}）．这时从气泡里放出的主要是水蒸气，这时水就沸腾了．沸腾时，在液体表面和液体内部同时发生汽化，这是沸腾和蒸发的主要区别．
 
 从上面水的沸腾过程可以看出，\textit{液体只有在它的饱和汽压等于外界压强时才能沸腾．}在外界压强是1标准大气压的情况下，水在100$^\circ$C沸腾，就是因为100$^\circ$C时水的饱和汽压为760毫米汞柱，等于外界的大气压强．
 
 液体沸腾时的温度叫做\textbf{沸点}．外部压强改变时，液体的沸点也改变．在外部压强增大时，液体需要升到较高的温度时饱和汽压才能等于外部压强，所以沸点升高．在外部压强
-减小时，液体在较低的温度下饱和汽压就能等于外部压强，所以沸点降低．上述结论可以用实验来证明．把一杯温度低于100$^\circ$C的热水放在抽气机的玻璃罩里，抽出罩里的空气，当罩里空气的压强降低到一定程度时，热水就沸腾起来（图5.7）．
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.45]{fig/5-7.png}
-\caption{压强减小时水的沸点降低}
+减小时，液体在较低的温度下饱和汽压就能等于外部压强，所以沸点降低．上述结论可以用实验来证明．把一杯温度低于100$^\circ$C的热水放在抽气机的玻璃罩里，抽出罩里的空气，当罩里空气的压强降低到一定程度时，热水就沸腾起来（图~\ref{fig_B_5-7}）．
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{fig/B/5-7.pdf}
+  \caption{压强减小时水的沸点降低}\label{fig_B_5-7}
 \end{figure}
 
 离海平面越高，大气压强越小，所以高山上水的沸点较低．珠穆朗玛峰顶的气压大约只有1/3标准大气压，在那里水烧到约72$^\circ$C就沸腾了，在海拔高的山上，由于沸点低，用
@@ -263,23 +272,25 @@
 
 汽化热常用字母$L$表示．在国际单位制中，汽化热的单位是焦/千克．
 
-不同物质的汽化热不同．下表列出了一些物质在1标准
+不同物质的汽化热不同．表~\ref{tab_B_5-3} 列出了一些物质在1标准
 大气压下沸点时的汽化热．
 
-\begin{center}
-  \begin{tabular}{cccccc}
-\hline
-物质  & 沸点&汽化热&  物质  & 沸点 &汽化热\\
-&（$^\circ$C）&（${\rm J}/{\rm kg}$）&& （$^\circ$C）&（${\rm J}/{\rm kg}$）\\
- \hline
-液态氦 &$-269$& $2.50\times 10^4$ &乙醚 &35& $3.52\times 10^5$\\
-液态氢&$-253$& $4.53\times 10^5$ &酒精&78& $8.55\times 10^5$\\
-液态氧&$-183$& $2.14\times 10^5$ &水&100& $2.26\times 10^6$\\
-液态二氧化碳&$-78.5$& $2.30\times 10^5$ &水银&357& $2.89\times 10^5$\\
-液态氨&$-33$& $1.37\times 10^6$ &液态铁&2750& $6.30\times 10^6$\\
- \hline
-\end{tabular}
-\end{center}
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_B_5-3}
+	\begin{tabular}{cccccc}
+	\toprule
+	物质  & 沸点&汽化热&  物质  & 沸点 &汽化热\\
+	&（$^\circ$C）&（${\rm J}/{\rm kg}$）&& （$^\circ$C）&（${\rm J}/{\rm kg}$）\\
+	\midrule
+	液态氦 &$-269$& $2.50\times 10^4$ &乙醚 &35& $3.52\times 10^5$\\
+	液态氢&$-253$& $4.53\times 10^5$ &酒精&78& $8.55\times 10^5$\\
+	液态氧&$-183$& $2.14\times 10^5$ &水&100& $2.26\times 10^6$\\
+	液态二氧化碳&$-78.5$& $2.30\times 10^5$ &水银&357& $2.89\times 10^5$\\
+	液态氨&$-33$& $1.37\times 10^6$ &液态铁&2750& $6.30\times 10^6$\\
+	\bottomrule
+	\end{tabular}
+\end{table}
 
 汽凝结为液体时要放出热量．实验表明，单位质量的汽凝结为液体时放出的热量，
 等于在同一温度下液体变为相同温度的汽时的汽化热．
@@ -292,28 +303,30 @@
 这是因为温度升高时液体分子间的距离增大，液体变为汽时克服分子间的引力需
 要做的功减小．
 
-下表是水在不同温度下的汽化热．
+表~\ref{tab_B_5-4} 是水在不同温度下的汽化热．
 
-\begin{center}
-\begin{tabular}{cccc}
-\hline
-温度（$^\circ$C）&汽化热（${\rm J}/{\rm kg}$）
-&温度（$^\circ$C）&汽化热（${\rm J}/{\rm kg}$）\\
-\hline
-0& $2.50\times 10^6$ & 200 & $1.96\times 10^6$ \\
-50& $2.38\times 10^6$ & 300 & $1.38\times 10^6$ \\
-100& $2.26\times 10^6$ & 370 & $4.14\times 10^5$ \\
-\hline
-\end{tabular}
-\end{center}
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_B_5-4}
+	\begin{tabular}{cccc}
+	\toprule
+	温度（$^\circ$C）&汽化热（${\rm J}/{\rm kg}$）
+	&温度（$^\circ$C）&汽化热（${\rm J}/{\rm kg}$）\\
+	\midrule
+	0& $2.50\times 10^6$ & 200 & $1.96\times 10^6$ \\
+	50& $2.38\times 10^6$ & 300 & $1.38\times 10^6$ \\
+	100& $2.26\times 10^6$ & 370 & $4.14\times 10^5$ \\
+	\bottomrule
+	\end{tabular}
+\end{table}
 
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.45]{fig/5-8.png}
-\caption{测定水的汽化热}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{fig/B/5-8.pdf}
+  \caption{测定水的汽化热}\label{fig_B_5-8}
 \end{figure}
 
-水的汽化热可以用图5.8所示的实验装置来测定．用酒
+水的汽化热可以用图~\ref{fig_B_5-8} 所示的实验装置来测定．用酒
 精灯把烧瓶A里的水加热至沸腾．从烧瓶A里出来的蒸汽，经过试管$B$
 进入装着水的量热器小筒$C$中．蒸汽经过试管$B$后，其中所含的小水滴留下来，
 使得进入量热器的蒸汽中不含有水滴．蒸汽在小筒$C$中凝结时放出热量，
@@ -325,16 +338,16 @@
 
 \subsection*{练习三}
 \begin{enumerate}
- \item 在1标准大气压下，乙醚的沸点是35$^\circ$C，这个温度时乙醚的饱和汽压是多大？
-  \item 锡的熔点是232$^\circ$C，但是用锡焊的水壶盛着水放在1000$^\circ$C以上的火上烧，锡并不熔解．为什么？
-  \item 在蒸汽暖室装置的散热器里，每小时有20千克100$^\circ$C的水蒸气液化成水，
-    并且水的温度降低到80$^\circ$C．求散热器每小时供给房间的热量．
-    \item 某人在做测定水的汽化热实验时，得到的数据如下：
-   钢制量热器小筒的质量为200克，通入水蒸气前筒内水的质量为350克，温度为14$^\circ$C；
-    通入100$^\circ$C的水蒸气后水的温度为36$^\circ$C，水的质量为364克，他测得的水的汽化热是多少？
-    \item 容器里装有0$^\circ$C的冰和水各500克，向里面通入100$^\circ$C的水蒸气后，
-    容器里的水升高到了30$^\circ$C．假设容器吸收的热量很少，可以忽略不计，并且容器是绝热的，
-    计算一下通入的水蒸气有多少？
+\item 在1标准大气压下，乙醚的沸点是35$^\circ$C，这个温度时乙醚的饱和汽压是多大？
+\item 锡的熔点是232$^\circ$C，但是用锡焊的水壶盛着水放在1000$^\circ$C以上的火上烧，锡并不熔解．为什么？
+\item 在蒸汽暖室装置的散热器里，每小时有20千克100$^\circ$C的水蒸气液化成水，
+并且水的温度降低到80$^\circ$C．求散热器每小时供给房间的热量．
+\item 某人在做测定水的汽化热实验时，得到的数据如下：
+钢制量热器小筒的质量为200克，通入水蒸气前筒内水的质量为350克，温度为14$^\circ$C；
+通入100$^\circ$C的水蒸气后水的温度为36$^\circ$C，水的质量为364克，他测得的水的汽化热是多少？
+\item 容器里装有0$^\circ$C的冰和水各500克，向里面通入100$^\circ$C的水蒸气后，
+容器里的水升高到了30$^\circ$C．假设容器吸收的热量很少，可以忽略不计，并且容器是绝热的，
+计算一下通入的水蒸气有多少？
 \end{enumerate}
 
 \section{气体的液化}
@@ -357,23 +370,25 @@
 后来，进一步的研究表明，各种气体都有一个特殊的温度，在这个温度以上，无论怎样增大压强也不能使气体液化，这个温度叫做\textbf{临界温度}．氧、氢、氮等气体所以没有被液化，就是因为它们的临界温度很低，当时的低温技术尚
 未获得这样低的温度．于是科学家们便努力提高低温技术，结果在二十世纪初，所有的气体都被液化了，最后一个被液化的气体是氦，它于1908年被液化，后来还被凝固成了固态．
 
-下表是一些物质的临界温度．
+表~\ref{tab_B_5-5} 是一些物质的临界温度．
 
-\begin{center}
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_B_5-5}
     \begin{tabular}{cccc}
-\hline
-  物质 &临界温度（$^\circ$ C）&物质 &临界温度（$^\circ$ C）\\
-\hline
-  氦&$-268$  & 氨 & 132 \\
-氢&$-240$  & 氯 & 144 \\
-氮&$-147$  & 乙醚 & 194 \\
-氧&$-119$  & 酒精 & 243 \\
-二氧化碳&31  & 水 & 374 \\
-\hline
+	\toprule
+	  物质 &临界温度（$^\circ$ C）&物质 &临界温度（$^\circ$ C）\\
+	\midrule
+	  氦&$-268$  & 氨 & 132 \\
+	氢&$-240$  & 氯 & 144 \\
+	氮&$-147$  & 乙醚 & 194 \\
+	氧&$-119$  & 酒精 & 243 \\
+	二氧化碳&31  & 水 & 374 \\
+	\bottomrule
   \end{tabular}
-\end{center}
+\end{table}
 
-从上表可以看出，二氧化碳、氨、氯等气体的临界温度较高，都在室温以上，所以容易液化．而氧、氮、氢、氦的临界温度很低，所以较难液化．
+从表~\ref{tab_B_5-5} 可以看出，二氧化碳、氨、氯等气体的临界温度较高，都在室温以上，所以容易液化．而氧、氮、氢、氦的临界温度很低，所以较难液化．
 
 液态气体有许多重要的应用．相同质量的液态气体的体积比气态小得多，便于贮存和运输，所以作为燃料的天然气常常液化后供应用户；火箭中用液态氢作燃料，用液态氧作氧化剂，液态空气蒸发时，沸点较低的氮气先蒸发，沸点较高的氧气后蒸发，因此利用液态空气可以分离出氧气和氮气．使容器中的空气液化，还可以获得压强很低的真空．
 
@@ -395,40 +410,40 @@
 用公式来表示就是
 \[B=\frac{p}{P}\times 100\% \]
 
-不同温度下水的饱和汽压可以从查表得到．这样，知道了空气的绝对湿度，利用上面的公式就可以求出空气的相对湿度．反过来，如果知道了某一温度下的相对湿度，也可以算出绝对湿度．
+不同温度下水的饱和汽压可以从表~\ref{tab_B_5-6} 得到．这样，知道了空气的绝对湿度，利用上面的公式就可以求出空气的相对湿度．反过来，如果知道了某一温度下的相对湿度，也可以算出绝对湿度．
 
 在绝对湿度一定的情况下，气温降低时，相对湿度将增大．因此，在夏季有时感到白天比较干燥，夜晚比较湿润．
 
 在住人的房间里，相对湿度为60—70\%比较适宜．
 
-\begin{table}
+\begin{table}[htbp]
     \centering
-    \caption{不同温度下水的饱和汽压（单位：毫米汞柱）}
-    \begin{tabular}{cccccccccccc}
-\hline
-    $t$ & $P$ &$t$ & $P$ &$t$ & $P$ &$t$ & $P$ &$t$ & $P$ &$t$ & $P$ \\
-($^\circ$C)&&($^\circ$C)&&($^\circ$C)&&($^\circ$C)&&($^\circ$C)&&($^\circ$C)\\
-\hline
-$-$15  &  1.44  &  $-$3  &  3.67  &  9  &  8.61  &  21  &  18.65  &  33  &  37.73  &  45  &  71.88\\
-$-$14  &  1.56  &  $-$2  &  3.96  &  10  &  9.21  &  22  &  19.83  &  34  &  39.9  &  50  &  92.51\\
-$-$13  &  1.69  &  $-$1  &  4.26  &  11  &  9.84  &  23  &  21.07  &  35  &  42.18  &  60  &  149.38\\
-$-$12  &  1.83  &  0  &  4.58  &  12  &  10.52  &  24  &  22.38  &  36  &  44.56  &  70  &  233.7\\
-$-$11  &  1.99  &  1  &  4.93  &  13  &  11.23  &  25  &  23.76  &  37  &  47.07  &  80  &  355.1\\
-$-$10  &  2.15  &  2  &  5.29  &  14  &  11.9  &  26  &  25.21  &  38  &  49.7  &  90  &  525.8\\
-$-$9  &  2.33  &  3  &  5.69  &  15  &  12.79  &  27  &  26.74  &  39  &  52.44  &  100  &  760\\
-$-$8  &  2.51  &  4  &  6.1  &  16  &  13.63  &  28  &  28.35  &  40  &  55.82  &  150  &  3570.5\\
-$-$7  &  2.72  &  5  &  6.54  &  17  &  14.53  &  29  &  30.04  &  41  &  58.34  &  200  &  11659.2\\
-$-$6  &  2.93  &  6  &  7.01  &  18  &  15.48  &  30  &  31.82  &  42  &  61.5  &  250  &  29817.8\\
-$-$5  &  3.16  &  7  &  7.51  &  19  &  16.48  &  31  &  33.7  &  43  &  64.8  &  300  &  64432.8\\
-$-$4  &  3.41  &  8  &  8.05  &  20  &  17.54  &  32  &  35.66  &  44  &  68.26  &  350  &  124001.6\\
-\hline
+    \caption{不同温度下水的饱和汽压（单位：毫米汞柱）}\label{tab_B_5-6}
+    \begin{tabular}{cc|cc|cc|cc|cc|cc}
+	\toprule
+	    $t$ & $P$ &$t$ & $P$ &$t$ & $P$ &$t$ & $P$ &$t$ & $P$ &$t$ & $P$ \\
+	($^\circ$C)&&($^\circ$C)&&($^\circ$C)&&($^\circ$C)&&($^\circ$C)&&($^\circ$C)\\
+	\midrule
+	$-$15  &  1.44  &  $-$3  &  3.67  &  9  &  8.61  &  21  &  18.65  &  33  &  37.73  &  45  &  71.88\\
+	$-$14  &  1.56  &  $-$2  &  3.96  &  10  &  9.21  &  22  &  19.83  &  34  &  39.9  &  50  &  92.51\\
+	$-$13  &  1.69  &  $-$1  &  4.26  &  11  &  9.84  &  23  &  21.07  &  35  &  42.18  &  60  &  149.38\\
+	$-$12  &  1.83  &  0  &  4.58  &  12  &  10.52  &  24  &  22.38  &  36  &  44.56  &  70  &  233.7\\
+	$-$11  &  1.99  &  1  &  4.93  &  13  &  11.23  &  25  &  23.76  &  37  &  47.07  &  80  &  355.1\\
+	$-$10  &  2.15  &  2  &  5.29  &  14  &  11.9  &  26  &  25.21  &  38  &  49.7  &  90  &  525.8\\
+	$-$9  &  2.33  &  3  &  5.69  &  15  &  12.79  &  27  &  26.74  &  39  &  52.44  &  100  &  760\\
+	$-$8  &  2.51  &  4  &  6.1  &  16  &  13.63  &  28  &  28.35  &  40  &  55.82  &  150  &  3570.5\\
+	$-$7  &  2.72  &  5  &  6.54  &  17  &  14.53  &  29  &  30.04  &  41  &  58.34  &  200  &  11659.2\\
+	$-$6  &  2.93  &  6  &  7.01  &  18  &  15.48  &  30  &  31.82  &  42  &  61.5  &  250  &  29817.8\\
+	$-$5  &  3.16  &  7  &  7.51  &  19  &  16.48  &  31  &  33.7  &  43  &  64.8  &  300  &  64432.8\\
+	$-$4  &  3.41  &  8  &  8.05  &  20  &  17.54  &  32  &  35.66  &  44  &  68.26  &  350  &  124001.6\\
+	\bottomrule
     \end{tabular}
 \end{table}
 
 \subsection*{练习四}
 
 \begin{enumerate}
-	\item 说明使未饱和汽变为饱和汽的方法和道理．
+\item 说明使未饱和汽变为饱和汽的方法和道理．
 \item 潮温的天气里，湿衣服不容易干，为什么？
 \item 在绝对湿度相同的情况下，冬天和夏天的相对湿度哪个大？为什么？
 \item 空气的绝对湿度是9毫米汞柱，气温是16$^\circ$C，相对湿度是多少？
@@ -443,13 +458,13 @@ $-$4  &  3.41  &  8  &  8.05  &  20  &  17.54  &  32  &  35.66  &  44  &  68.26 
 \textbf{使空气里的水蒸气刚好达到饱和时的温度，称为露点．}
 
 空气中含的水蒸气多，气温只要少许降低一点，就达到露点，水蒸气就达到饱和；反之，空气中含的水蒸气少，气温要降低较多，才能达到露点，水蒸气才达到饱和，因此，根据露点和气温的差值，可以大致判断出空气中水蒸气的饱和程度，从而判断出相对湿度的大小．
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=.45]{fig/5-9.png}
-\caption{测定露点}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{fig/B/5-9.pdf}
+  \caption{测定露点}\label{fig_B_5-9}
 \end{figure}
 
-露点可以用图5.9所示的装置来测定．玻璃杯里装入乙醚，杯盖上有三个孔，分别插入温度计$A$和两根弯曲的玻璃管$B$、$C$．管$C$的一端插在乙醚中，另一端连接打气球．管$B$是出气用的．用打气球向乙醚里打气，乙醚就迅速蒸发，使杯子和周围空气的湿度降低，当降低到某一温度时，杯子周围空气中的水蒸气达到饱和，杯壁上就出现一层露滴，这时温度计指示的湿度就是露点，在这个装置中如果用表面光亮的金属
+露点可以用图~\ref{fig_B_5-9} 所示的装置来测定．玻璃杯里装入乙醚，杯盖上有三个孔，分别插入温度计$A$和两根弯曲的玻璃管$B$、$C$．管$C$的一端插在乙醚中，另一端连接打气球．管$B$是出气用的．用打气球向乙醚里打气，乙醚就迅速蒸发，使杯子和周围空气的湿度降低，当降低到某一温度时，杯子周围空气中的水蒸气达到饱和，杯壁上就出现一层露滴，这时温度计指示的湿度就是露点，在这个装置中如果用表面光亮的金属
 杯代替玻璃杯，更容易观察到露滴的出现，效果会更好．
 
 测出了露点，从水的饱和汽压表中查出露点时的饱和汽压，这个饱和汽压就是空气在原来温度时的绝对湿度，知道了绝对湿度，再查出原来温度下的饱和汽压，就可以求出相对湿度．
@@ -457,30 +472,32 @@ $-$4  &  3.41  &  8  &  8.05  &  20  &  17.54  &  32  &  35.66  &  44  &  68.26 
 \subsection{湿度计} 
 既然测出露点就能求出空气的绝对湿度和相对湿度，所以测定露点的仪器就是一种湿度计．这种湿度计叫做\textbf{露点湿度计}．
 
-\begin{figure}[htp]\centering
-	\begin{minipage}[t]{0.48\textwidth}
-		\centering
-\includegraphics[scale=.6]{fig/5-10.png}
-\caption{干湿泡湿度计}
-	\end{minipage}
-	\begin{minipage}[t]{0.48\textwidth}
-		\centering
-\includegraphics[scale=.6]{fig/5-11.png}
-\caption{毛发湿度计}
-	\end{minipage}
+\begin{figure}[htbp]
+  \centering
+  \begin{minipage}[t]{0.48\textwidth}
+    \centering
+    \includegraphics{fig/B/5-10.pdf}
+    \caption{干湿泡湿度计}\label{fig_B_5-10}
+  \end{minipage}
+  \hfil
+  \begin{minipage}[t]{0.48\textwidth}
+    \centering
+    \includegraphics{fig/B/5-11.pdf}
+    \caption{毛发湿度计}\label{fig_B_5-11}
+  \end{minipage}
 \end{figure}
 
-还有两种常用的湿度计，一种叫做\textbf{干湿泡湿度计}（图5-10）．它由两支完全相同的湿度计组成，湿度计$A$叫做干泡
+还有两种常用的湿度计，一种叫做\textbf{干湿泡湿度计}（图~\ref{fig_B_5-10}）．它由两支完全相同的湿度计组成，湿度计$A$叫做干泡
 湿度计，用来测量空气的湿度；湿度计$B$叫做湿泡湿度计，它的水银泡上包着棉纱，棉纱的下端浸在水中，由于水的蒸发，湿度计$B$指示的湿度总是低于$A$的．$A$、$B$的湿度差叫做干湿泡湿度差，空气的相对湿度越小，即空气越干燥，湿泡湿度计$B$上的水蒸发得越快，$B$的湿度就降得越低，两支湿度计的湿度差就越大；反之，空气的相对湿度越大，即空气越潮湿，湿度计$B$上的水蒸发得就越慢，$A$、$B$的湿度差就越小．所以，干湿泡湿度差的大小跟空气的相对湿度有直接关系，如果把不同湿度时相应于不同的干湿泡湿度差的相对湿度计算出来，绘制成表或画成曲线，那么根据干湿泡湿度计上$A$、$B$两支湿度计的读数，从表或曲线上很快就可以得出空气的相对湿度．
 
-另一种常用的湿度计叫做\textbf{毛发湿度计}（图5.11）．它是利用人的头发在脱脂以后，其长度会随着空气的相对湿度而变化制成的．毛发湿度计由一根或一束脱脂的毛发、指针和刻度盘组成．空气的相对湿度增大时，毛发伸长；相对湿度减小时，毛发缩短．毛发长度的变化控制指针的偏转，从刻度盘上就可以直接读出相对湿度．
+另一种常用的湿度计叫做\textbf{毛发湿度计}（图~\ref{fig_B_5-11}）．它是利用人的头发在脱脂以后，其长度会随着空气的相对湿度而变化制成的．毛发湿度计由一根或一束脱脂的毛发、指针和刻度盘组成．空气的相对湿度增大时，毛发伸长；相对湿度减小时，毛发缩短．毛发长度的变化控制指针的偏转，从刻度盘上就可以直接读出相对湿度．
 
 三种湿度计各有不同的优缺点．露点湿度计测量准确，但是结构比较复杂，测出露点后要进行查表、计算等，使用起来不太方便．干湿泡湿度计使用比较方便，也比较准确，所以生活中大都使用这种湿度计．毛发湿度计结构简单，不易损坏，可以直接读数，还可以和自动记录装置联合使用，缺点是不太准确，要经常进行校准．
 
 \subsection*{练习五}
 
 \begin{enumerate}
-	\item 在北方，冬天戴着眼镜从寒冷的室外进入温暖的空内时，镜片上常出现一层细小的露滴．这是为什么？
+\item 在北方，冬天戴着眼镜从寒冷的室外进入温暖的空内时，镜片上常出现一层细小的露滴．这是为什么？
 \item 白天空气的绝对湿度是13.7毫米汞柱．天气预报夜里的最低温度是14$^\circ$C，如果空气的绝对湿度保持不变，夜里会不会出现露水？
 \item 如果干湿泡湿度计上两支温度计的指示数字相同，这时空气的相对湿度是多少？
 \item 空气的温度是20$^\circ$C，露点是12$^\circ$C，这时的绝对湿度和相对湿度是多少？
@@ -505,15 +522,16 @@ $-$4  &  3.41  &  8  &  8.05  &  20  &  17.54  &  32  &  35.66  &  44  &  68.26 
 
 \section*{复习题}
 \begin{enumerate}
-
-	\item 晶体和非晶体在熔解和凝固时有什么不同？怎样从它们的微观结构来说明这种不同？
-	\item 什么是物质的熔解热？
-		\item 什么是蒸发？怎样用分子运动论的观点来解释影响蒸发快慢的各种因素？蒸发为什么能致冷？
-	\item 什么是沸腾？液体沸腾的条件是什么？为什么外界压强增大时沸点升高，压强减小时沸点降低？
-	\item 什么是物质的汽化热？
-	\item 什么叫饱和汽？什么叫未饱和汽？饱和汽的密度和压强跟温度有什么关系？跟体积有什么关系？怎样解释这种关系？
-	\item 怎样才能使气体液化？什么叫做气体的临界温度？
-	\item 什么叫做空气的绝对湿度和相对湿度？在绝时湿度保持不变的情况下，气温不同时相对湿度是否相同？为什么？
-	\item 什么叫做露点？测出露点，怎样求出空气的绝对湿度和相对湿度？
-	\item 干湿泡湿度计和毛发湿度计各是利用什么现象制做的？
+    \item 晶体和非晶体在熔解和凝固时有什么不同？怎样从它们的微观结构来说明这种不同？
+    \item 什么是物质的熔解热？
+    \item 什么是蒸发？怎样用分子运动论的观点来解释影响蒸发快慢的各种因素？蒸发为什么能致冷？
+    \item 什么是沸腾？液体沸腾的条件是什么？为什么外界压强增大时沸点升高，压强减小时沸点降低？
+    \item 什么是物质的汽化热？
+    \item 什么叫饱和汽？什么叫未饱和汽？饱和汽的密度和压强跟温度有什么关系？跟体积有什么关系？怎样解释这种关系？
+    \item 怎样才能使气体液化？什么叫做气体的临界温度？
+    \item 什么叫做空气的绝对湿度和相对湿度？在绝时湿度保持不变的情况下，气温不同时相对湿度是否相同？为什么？
+    \item 什么叫做露点？测出露点，怎样求出空气的绝对湿度和相对湿度？
+    \item 干湿泡湿度计和毛发湿度计各是利用什么现象制做的？
 \end{enumerate}
+
+
