--- a/physics.tex
+++ b/physics.tex
@@ -63,8 +63,8 @@
 	%\include{1/B/03} %气体的性质
 	%\include{1/B/04} %固体和液体的性质
 	%\include{1/B/05} %物态变化
-	\include{1/B/06} %电场
-	%\include{1/B/07} %稳恒电流
+	%\include{1/B/06} %电场
+	\include{1/B/07} %稳恒电流
 	%\include{1/B/08} %物质的导电性
 	
 	%\include{1/B/app_01} %学生实验
