初步完成B-附录

--- a/1/B/app_02.tex
+++ b/1/B/app_02.tex
@@ -15,7 +15,7 @@
 用冰盘混合物致冷可以人工造成云雾．找一个小铁罐（如一个罐头盒子），放在冰盐混合物或雪盐混合物中，小铁罐里的空气很快就冷却，对着小铁罐吹口气，水蒸气就被带进铁罐里，由于里面温度很低，水蒸气凝结成小水滴，这样就造出了淡淡的云雾，用手电筒照一下小铁罐里面，就可以看到人造的云雾．
 
 \section{测定水的汽化热}
-用下述办法可以粗略地测定水的汽化热，在铝锅里装一些室温（$\theta_1{}^\circ{\rm C}$)下的水，将铝锅放在炉子上加热．设经过时间$t_1$水达到沸点$\theta_2{}^\circ{\rm C}$，再经过时间$t_2$水全部汽化完．已知水的比热$c=4.2\x10^3{\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$，由下式即可求出水的汽化热：
+用下述办法可以粗略地测定水的汽化热，在铝锅里装一些室温（$\theta_1{}^\circ{\rm C}$)下的水，将铝锅放在炉子上加热．设经过时间$t_1$水达到沸点$\theta_2{}^\circ{\rm C}$，再经过时间$t_2$水全部汽化完．已知水的比热$c=4.2\times10^3{\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$，由下式即可求出水的汽化热：
 \[L=c(\theta_2-\theta_1)\frac{t_2}{t_1} \; {\rm J}/{\rm kg}  \]
 
 上式是这样得到的：设锅里的水每秒吸收的热量为$g$焦，把室温的水加热到沸点所需的热量$Q_1$和水全部汽化所需的热量$Q_2$分别为
@@ -35,10 +35,11 @@ Q_2&=mL=gt_2
 
 \section{用自制的验电器做静电实验}
 如图9.15所示，是一个简易验电器，金属丝对折后穿过瓶盖插入透明的玻璃瓶里，取两条约长2厘米、宽4毫米的金属箔，分别挂在金属丝的两端．两金属箔不带电时自由下垂，带电时互相推斥而张开．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/9-15.png}
-    \caption{}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-15.pdf}
+    \caption{}\label{fig_B_9-15}
+\end{figure}
 
 照上面说的那样，自己做
 一个验电器，要注意，应把瓶盖
@@ -55,37 +56,6 @@ Q_2&=mL=gt_2
 取一只电灯泡，看一看它上面标明的额定功率和额定电压是多少，并利用额定功率和额定电压的数值算出灯丝的电阻．你计算得出的电阻是多少？
 
 再用万用表直接测出这只电灯泡灯丝的电阻，你测得的电阻又是多少？跟计算得出的数值是否一致？想想看，这是什么道理？
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
