--- a/1/B/app_01.tex
+++ b/1/B/app_01.tex
@@ -11,19 +11,19 @@
 将活塞插入注射器内一部分后，将注射器的小孔堵住，以封入一定质量的空气．
 
 把注射器固定好，在框架的两侧加挂钩码，使空气柱的体积减小（图9.1）．改变钩码的个数，再做两次，记下每次加挂的钩码数和相应的空气柱的体积．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \begin{minipage}[t]{0.48\textwidth}
-    \centering
-    \includegraphics[scale=.5]{fig/9-1.png}
-    \caption{}
+        \centering
+        \includegraphics{fig/B/9-1.pdf}
+        \caption{}\label{fig_B_9-1}
     \end{minipage}
     \begin{minipage}[t]{0.48\textwidth}
-    \centering
-    \includegraphics[scale=.5]{fig/9-2.png}
-    \caption{}
+        \centering
+        \includegraphics{fig/B/9-2.pdf}
+        \caption{}\label{fig_B_9-2}
     \end{minipage}
-    \end{figure}
+\end{figure}
 
 然后，用弹簧秤钩住活塞框架的上边，慢慢竖直提起活
 塞，使空气柱的体积增大（图9.2），记下三组每提到一定高度时弹簧秤的读数和相应的空气柱的体积．
@@ -34,10 +34,11 @@
 这个实验，我们利用实验一的装置来验证气体状态方程．
 
 跟实验一一样，先用弹簧秤称出活塞和框架的重量；测出注射器的全部刻度的长度，求出活塞的横截面积$S$；记下这时的大气压强$p_0$．在注射器内封入一定质量的空气．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/9-3.png}
-    \caption{}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-3.pdf}
+    \caption{}\label{fig_B_9-3}
+\end{figure}
 
 照图9.3那样，固定好注射器和烧杯．在活塞框架的两侧加挂钩码，用公式$p=p_0+ \dfrac{F}{S}$计算出空气柱的压强（注意压力$F$中应包括活塞和框架的重
 量）．向烧杯里倒入适量的水，使注射器内的空气柱位于水面之下．经过两分钟左右，用温度计测出水的温度$t$，可以认为这个温度就是空气柱的温度，把它换算成热力学温度$T$．记下这时空气柱的体积$V$．
@@ -59,16 +60,17 @@
 时，记录下来的温度$t$就是冰、水混合后的平衡温度，最后再称量一下量热器小筒和水的质量（其中包括冰的质量），算出冰的质量$m_{\text{冰}}$．
 
 把由实验得到的数据代入第二段中的公式，求出冰的熔
-解热，水的比热$c_{\text{水}}$，可取为$4.2\x10^3{\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$，铝制小筒的比热$c_{\text{筒}}$可取为$8.9\x10^2 {\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$，铜制小筒的比热$c_{\text{筒}}$可取为$3.9\x10^2{\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$．
+解热，水的比热$c_{\text{水}}$，可取为$4.2\times10^3{\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$，铝制小筒的比热$c_{\text{筒}}$可取为$8.9\times10^2 {\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$，铜制小筒的比热$c_{\text{筒}}$可取为$3.9\times10^2{\rm J}/({\rm kg}\cdot {}^\circ{\rm C})$．
 
 实验中要注意读准温度计的示数，冰块不宜太大，为什么？在这个实验中，误差的主要来源是什么？
 
 \section{测定空气的相对湿度}
 这个实验我们学习测定空气的相对湿度，实验装置如图9.4所示．圆柱形金属盒的一个底面十分光亮，侧面有开口，开口旁边有一小孔，用来插入温度计，环形金属片套在金属盒上，它的一面也是十分光亮，井与金属盒的光亮面在同一平面内，金属盒和环形片用胶木垫圈隔开，防止相互间的热传导，搅拌器插在开口中．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/9-4.png}
-    \caption{}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-4.pdf}
+    \caption{}\label{fig_B_9-4}
+\end{figure}
 
 实验时，先记录下实验室的温度，用柔软的绒布仔细地把金属盒和环形片的光亮面擦得十分干净，在金属盒里注入约
 半盒室温的水，再向水里投入适量的碎冰块（注意不要沾污光亮面），装上温度计，并使它的刻度向着金属盒的光亮面，搅动冰块，使水温迅速下降，同时密切注视金属盒和环形片的光亮面，当金属盒的光亮面上刚刚出现细小的露滴时，记录下这一瞬间盒里水的温度，等水的温度又开始上升，金属盒光亮面
@@ -81,10 +83,11 @@
 在这个实验里，我们学习用描迹法画出电场中平面上的等势线．
 
 如图9.5所示，在平整的木板上铺一张白纸，白纸上依次铺放复写纸和导电纸，导电纸有导电物质的一面向上，白纸、复写纸和导电纸一起用图钉固定在木板上，导电纸上平放着跟它接触良好的两个圆柱形电极，电极A与电源的正极相连作为正电荷，电极$B$与电源的负极相连作为负电荷\footnote{我们在第六章学习的是静电场．直接接绘静电场中的等势线是相当困难的，由于静电场和稳恒电流场遵守的规律相似，这里是用在导电纸上形成的稳恒电流场模拟静电场来做实验．}．两电极之间的距离约为10厘米，电压约为6伏．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.4]{fig/9-5.png}
-    \caption{}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-5.pdf}
+    \caption{}\label{fig_B_9-5}
+\end{figure}
 
 现在，我们来描绘正、负电荷$A$、$B$在纸面上的等势线．从灵敏电流表的两个接线柱引出两个探针，用来探测导电纸上的等势点．先在导电纸平面两电极的连线上，选取间距大致相等的五个点作为基准点，并用探针把它们的位置复印在白纸上，在某一基准点将一个探针跟导电纸相接触，然后在导电纸平面上两电极连线的一侧，距此基准点约1厘米处再选一个点，在此点将另一探针跟导电纸相接触，一般这时会看
 到电流表的指针有偏转，左右移动另一探针的位置，直到找到一点，使电流表的指针没有偏转为止，电流表的指针没有偏转，说明这个点跟基准点的电势相等，用探针把这个点的位置复印在白纸上，照上述方法，在这个基准点的两侧，各探测出五个等势点，每个等势点大约相距1厘米．用同样的方法，探测出另外四个基准点的等势点．最后，取出白纸．根据五组等势点画出五条平滑的曲线，它们就是等势线，你能不能根据这些等势线在白纸上画出两个异种电荷的电力线：画一画看．
@@ -95,23 +98,10 @@
 我们知道，电容器的电容等于电容器所带电量跟两极之
 因此，如果测量出某一电压下间的电势差的比值，即$C=Q/U$．因此，如果测量出某一电压下
 电容器所带的电量，就可以求出电容器的电容．怎样才能测量出电容器所带的电量呢？
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
-    \begin{circuitikz}[european, scale=1.5, >=stealth]
-\draw (0,0) --(2,0)--(3,0)--(5,0)to [rmeter, t=$\mu{\rm A}$] (6,0) to [R=$R$] (6,2)--(5,2) ;
-\draw (3,2)--(2.5,2);
-\draw[->](2.5,2)--(2.5,1)--(2.15,1);
-
-\draw (2,0) to [R=$R'$, *-](2,2) ;\draw (0,2) to [battery2](0,0);
-\draw (3,2) to [cute open switch] (5,2);
-\draw(0,2) to  [cute open switch] (2,2);
-\node at (4,2)[below]{$K$}; 
-\node at (1,2)[below]{$K'$}; 
-
-\draw (4.75,2) to [ecapacitor=$C$, *-*] (4.75,0); 
-\draw (3.25,0) to [rmeter, t=V, *-*] (3.25,2); 
-    \end{circuitikz}    
-    \caption{}
+    \includegraphics{fig/B/9-6.pdf}
+    \caption{}\label{fig_B_9-6}
 \end{figure}
 
 测量电路如图9.6所示，合上电键$K'$、$K$，对电容器$C$充电．当电容器两端电压$U_c$上升到某一稳定电压$U$时，充电完毕．然后将电键$K$打开，这时容器通过电阻$R$放电，放电电流$i_c$随时间$t$的增加而逐渐减小，放电完毕时$i_c=0$．在电容器放电过程中，如果在某一时刻的放电电流为$i_c$，那么在一小段时间间隔$\Delta t$里，从电容器正极转移到负极上的电量就等于$i_c\Delta t$，将整个放电过程中每小段时间所转移的电量加起来，就得到电容器所带的电量$Q$．
@@ -139,53 +129,29 @@
 我们学习了把电流表改装为安培表和伏特表的原理，在这个实验里，我们练习把电流表改装为伏特表．
 
 改装电流表，需要知道它的三个数据：满度电流$I_g$，满度电压$U_g$（电流表的指针偏转到满刻度时加在表头上的电压）和内电阻$r_g$．这三个数据中，知道任何两个，就可以根据欧姆定律算出第三个，电流表的$I_g$可以从刻度盘上直接读出，$r_g$可用实验方法测出，于是就可以算出$U_g$．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
-    \begin{circuitikz}[european, scale=1, >=stealth]
-        \draw (4,0) to[battery2] (3,0)--(0,0)--(0,4)to [rmeter,t=G](4,4)to [R](8,4)--(8,0);
-        \draw [->](7.25,4)--(7.25,4.75)--(6,4.75)--(6,4.2);
-        \draw (4,0) to[cute open switch] (8,0);
-        \node at (6,4-.5){$R$};
-        \draw (0,1.5)to [cute open switch] (2,1.5) to [vR=$R'$](4.5,1.5)--(4.5,4);
-        \draw (0,1.5) [fill=black] circle (1.2pt);\draw (4.5,4) [fill=black] circle (1.2pt);
-        \draw (7.25,4) [fill=black] circle (1.2pt);
-        \node at (6,0)[below]{$K_1$};
-        \node at (1,1.5)[below]{$K_2$};
-    \end{circuitikz}    
-    \caption{}
+    \includegraphics{fig/B/9-7.pdf}
+    \caption{}\label{fig_B_9-7}
 \end{figure}
 
 我们利用图9.7所示的电路来测定电流表的内电阻$r_g$．$R$可用470千欧的电位器\footnote{电位器是一种可以连续调节电阻值的变阻器，常用作分压器．}，$R'$是电阻箱，合上电键$K$，调整电位器$R$，使电流表指针偏转到满刻度（要注意，不应使通过电流表的电流超过它的满度电流值，以免把表烧坏），然后再合上电键$K_2$，调整电阻箱$R'$的阻值，使电流表指针偏转到正好是满刻度的一半，当$R$比$R'$大很多时，接入$R$后，干路中电流变化不大，因此可以认为$r_g=R'$．
 
 
 测出$r_g$后，再计算出电流表的满度电压$U_g$，然后算出把它改装为2伏特的伏特表时，应该串联多大的电阻$R_1$．在电阻箱上取好阻值$R_1$，把电流表跟电阻箱串联起来，就是一个量程是2伏特的伏特表了．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \begin{minipage}[t]{0.48\textwidth}
-    \centering
-    \begin{circuitikz}[european, scale=.9, >=stealth]
-        \draw(0,0)--(0,1)--(4,1) to [R=$R_2$] (6,1)--(6,0) to [cute open switch] (3,0) to [battery2] (0,0);
-        \draw (0,1)--(0,3) to [rmeter, t=G] (3,3) to [vR=$R_1$] (5.4,3);
-        \draw[->]  (5.4,3)-- (5.4,1.2);
-        \draw (0,2)to [rmeter, t=V,*-*] (5.4,2);
-        \node at (4.5,0)[above]{$K$};
-
-    \end{circuitikz}
-    \caption{}
+        \centering
+        \includegraphics{fig/B/9-8.pdf}
+        \caption{}\label{fig_B_9-8}
     \end{minipage}
     \begin{minipage}[t]{0.48\textwidth}
-    \centering
-    \begin{circuitikz}[european, xscale=1.3, >=stealth]
-        \draw(0,0)--(0,1.3) to [rmeter, t=V, *-*] (4,1.3)--(4,0) to [cute open switch] (2,0) to [battery2](.5,0) --(0,0);
-\draw(0,1.3)--(0,2.5)--(1,2.5) to [R] (2,2.5) to [rmeter, t=A] (4,2.5)--(4,1.3);
-\draw [->](.35,2.5)--(.35,3.2)--(1.5,3.2)--(1.5,2.7);
-\node at (1.5,2){$R$};
-\node at (2.5/2,-.5){$\mathcal{E}, \; r$};
-\node at (3,0)[above]{$K$};
-    \end{circuitikz}    
-    \caption{}
+        \centering
+        \includegraphics{fig/B/9-9.pdf}
+        \caption{}\label{fig_B_9-9}
     \end{minipage}
-    \end{figure}
+\end{figure}
     
 
 最后把改装成的伏特表跟标准伏特表核对一遍．实验电路如图9.8所示，$V$是标准伏特表，改变变阻器$R_2$的触点，使$V$的读数分别为0.5伏特、1伏特、1.5伏特、2伏特时，核对一下改装的伏特表的读数是否正确，核对时要注意搞清楚改装后电流表上刻度的每一小格表示多大电压．最后算出改装的伏特表满刻度时的百分误差．例如改装的伏特表在满刻度2伏特时，标准伏特表的读数为2.1伏特，那么满刻度时的百分误差就是
@@ -214,10 +180,11 @@
 程，由于万用表具有用途多、量程广、使用方便等优点，因此得到了广泛的应用，这个实验我们来学习万用表的使用．
 
 万用表的型号很多，但使用方法基本相同，下面以J0411型万用表为例来说明它的使用方法和注意事项．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.55]{fig/9-10.png}
-    \caption{}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-10.pdf}
+    \caption{}\label{fig_B_9-10}
+\end{figure}
 
 J0411型万用表的外形如图9.10所示．它的上半部是表
 头，表盘上有电阻、电流、电压等各种量程的刻度，有的刻度是均匀的，因此合用一个刻度．下半部是选择开关，它的四周刻着各种测量项目和量程．应当注意，电流和电压又分为直流（用符号“$-$”表示）和交流（用符号“$\sim$”表示），要区别开，不要弄错．另外还有欧姆档的调零旋钮和测试笔插孔．
@@ -240,19 +207,10 @@ J0411型万用表的外形如图9.10所示．它的上半部是表
 \section{用惠斯通电桥测电阻}
 
 这个实验是用滑线式电桥来测电阻．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
-    \begin{circuitikz}[european, >=stealth]
-\draw (-3,0)node[left]{$A$} to [vR=$R_0$,*-*](0,3)node[above]{$B$}to [R=$R_x$,*-*](3,0)node[right]{$C$}--(-3,0);
-\draw (3,0)-- (3,-2) to [cute open switch] (1,-2)to [battery2] (-1,-2) to [R=$R$] (-3,-2)--(-3,0);
-\draw[->](-.5,-2) --(-.5,-1.5)--(-2,-1.5)--(-2,-2+.2);
-\draw (0,3) to [rmeter, t=G] (0,.5);
-\draw[->, thick] (0,.5)--(-.7,.5)--(-.7,0)node [below]{$D$};
-\node at (-1.85,0)[below]{$\ell_1$};
-\node at (1.15,0)[below]{$\ell_2$};
-\node at (2,-2)[above]{$K$};
-    \end{circuitikz}    
-    \caption{}
+    \includegraphics{fig/B/9-11.pdf}
+    \caption{}\label{fig_B_9-11}
 \end{figure}
 
 实验电路如图9.11所示，其中$R_x$是待测电阻，$R_0$是作已知电阻用的电阻箱，$G$是灵敏电流表，按图接好电路后，先把变阻器$R$调到阻值较大的位置，然后进行实验．
@@ -267,30 +225,11 @@ J0411型万用表的外形如图9.10所示．它的上半部是表
 
 \section{测定铜的电化当量}
 在这个实验里，我们根据法拉第电解第一定律$m=kIt$，测出$m$、$I$和$t$的值，从而确定电化当量$k$．
-\begin{figure}[htp]\centering
-\begin{circuitikz}[>=latex]
-\draw  (3,0) to [cute open switch] (2,0) to [battery2] (0,0) --(0,4)--(3,4)--(3,3);
-\draw (6,0)to [rmeter, t=A] (6,3.5)--(1.5,3.5)  ;
-\draw (1.5,3.5)--(1.5,3);
-\draw (3,3.5)--(3,3);
-\draw (4.5,3.5)--(4.5,3);   
-\draw (6,0) to [european, R=$R$]  (3,0) ;
-\fill [blue!40] (.75, 1.5) rectangle (5.25,2.8);
-
-\draw [<-](4.5,.2)--(4.5,.75)--(5.5,.75)--(5.5, 0);
-\draw (1.4,2) rectangle (1.6,3);
-\draw (2.9,2) rectangle (3.1,3);
-\draw (4.4,2) rectangle (4.6,3);
-\draw [very thick](.75,3.2)--(.75, 1.5)--(5.25,1.5)--(5.25,3.2);
-\node at (1.4,3)[left]{$+$};
-\node at (3.1,3)[right]{$-$};
-\node at (4.6,3)[right]{$+$};
-\node at (2.5,.25){$K$};
-
-
-    \end{circuitikz}
-    \caption{}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-12.pdf}
+    \caption{}\label{fig_B_9-12}
+\end{figure}
 
 准备三块铜片，两块作为阳极，一块作为阴极，并用细砂纸把铜片擦干净，用天平仔细称量作为阴极的铜片的质量．把铜片放入盛有硫酸铜溶液的电解槽内，按照图9.12接好电路（注意电源和安培表的正负端不要接错），合上电键$K$，调节变阻器$R$使安培表的读数为2安培左右，并开始计时．25—30分钟后，打开电键$K$，停止电解．注意要在整个电解过程中，调节变阻器使电流强度保持不变．电解结束后，取出电极，用酒精灯把阴极板烘干，再用天平仔细称量出这时阴极板的质量，比较两次称量的阴极板的质量，就可以得到电解过程中在阴极板上析出的铜的质量$m$．把$m$、$I$和$t$带入法拉第电解第一定律公式，算出铜的电化当量．
 
@@ -300,10 +239,11 @@ J0411型万用表的外形如图9.10所示．它的上半部是表
 示波器是一种常用的电子仪器，它的核心部分是一只示波管，利用它能够直接观察电信号随时间而变化的情况，并且可以测量电压和电流．我们现在初步学习一下示波器的使用方法，在后面的实验里还要多次用到它．
 
 示次器的型号很多，使用方法基本相同，下面以J2459型示波器（图9.13）为例来说明．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.45]{fig/9-13.png}
-    \caption{J2459型示波器的面板}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-13.pdf}
+    \caption{J2459型示波器的面板}\label{fig_B_9-13}
+\end{figure}
 
 我们先来了解示波器面板上各个旋纽和开关的名称和作用．荧光屏右边最上端的旋钮是辉度调节“$\star$”，用来调节图象的亮度，顺时针旋转时亮度逐渐增大，它下面的旋钮是聚焦调节“$\odot$”和辅助聚焦“$\textcircled{~}$”，这两个旋钮配合着使用，能使电子射线会聚，在荧光屏上产生一个小的亮斑，得到清晰的图象，再下面是电源开关和指示灯，用后盖板上的电源插座接通电源后，把开关板向“开”的位置，指示灯亮，经过一两分钟
 的预热，示波器就可以使用了．
@@ -325,18 +265,11 @@ J0411型万用表的外形如图9.10所示．它的上半部是表
 把X增益旋钮顺时针转到三分之一处，扫描微调旋钮反时针转到底，扫描范围旋钮置于最低档．可以看到扫描的情形：亮斑从左向右移动，到右端后又很快回到左端，顺时针旋转扫描微调以增大扫描频率，可以看到亮斑迅速移动成为一条亮线，调整X增益，可以看到亮线长度的改变．
 
 现在给竖直方向加一个直流电压．事先把扫描范围旋钮置于“外X”档，使亮斑位于屏的中心，把“DC、AC”开关置于“DC”位置，照图9.14连接电路，直流电源用一、二节干电池即可，逐步减小衰减档，观察亮斑的向上偏移，再调整Y增益使亮斑偏移一段适当的距离，调整变阻器改变输入电压，可以看到亮斑的偏移随着改变，电压越高，偏移越大，调换电池的正负极，改变输入电压的方向，可以看到亮斑改为向下偏移．
-\begin{figure}[htp]\centering
-    \begin{circuitikz}[>=latex]
-\draw(0,0) to [cute open switch] (2,0) to [battery2](3,0) --(4,0)--(4,4);
-\draw(0,0)--(0,3) to [european, R] (3,3)--(3,0);
-\draw[<-]  (1.5,3.2)--(1.5,4)--(3.5,4);   
-\draw (4,4)[fill=white] circle (1.5pt)node[right]{地};
-\draw (3.5,4)[fill=white] circle (1.5pt)node[above]{Y输入};
-\draw (3.7,5.5) circle (.3);
-\draw (3,3.5) rectangle (4.5, 6);
-    \end{circuitikz}
-    \caption{}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/B/9-14.pdf}
+    \caption{}\label{fig_B_9-14}
+\end{figure}
 
 亮斑偏移的距离跟输入的电压成正比，因而利用示波器
 能够测量电压，J2459型示波器的竖直位移已经校准，当衰减旋钮处在“1”的位置，Y增益旋钮顺时针转到底时，如果输入电压为50毫伏，则亮斑恰好偏移1格．这样，我们就可以根据亮斑偏移的格数来算出输入的电压值，测量时要注意把Y增益旋钮顺时针转到底；衰减旋钮处在10、100或1000档时，算出的电压值应乘以相应的倍数，现在来测一节干电池的电压，你测出的数值是多少？
