--- a/physics.tex
+++ b/physics.tex
@@ -79,18 +79,18 @@
 	%
 	
 	%封面内容
-	\title{\Huge\bfseries 高中物理（甲种本）\\ 第三册\vspace*{2cm} }
-	\author{\Large 张同恂\and \Large 方玉珍\and \Large 马淑美}
-	\date{\Large 1985年11月\\~\\~\\ \includegraphics[scale=1.8]{fig/C/cover.pdf}}
+	%\title{\Huge\bfseries 高中物理（甲种本）\\ 第三册\vspace*{2cm} }
+	%\author{\Large 张同恂\and \Large 方玉珍\and \Large 马淑美}
+	%\date{\Large 1985年11月\\~\\~\\ \includegraphics[scale=1.8]{fig/C/cover.pdf}}
 	
-	\maketitle %封面
-	\tableofcontents %目录
-	\frontmatter
-	\include{1/C/preface.tex} %说明
-	\mainmatter
+	%\maketitle %封面
+	%\tableofcontents %目录
+	%\frontmatter
+	%\include{1/C/preface.tex} %说明
+	%\mainmatter
 	
 	%正文内容
-	%\include{1/C/01} %磁场
+	\include{1/C/01} %磁场
 	%\include{1/C/02} %电磁感应
 	%\include{1/C/03} %交流电
 	%\include{1/C/04} %电磁振荡和电磁波
