--- a/physics.tex
+++ b/physics.tex
@@ -90,8 +90,8 @@
 	%\mainmatter
 	
 	%正文内容
-	\include{1/C/01} %磁场
-	%\include{1/C/02} %电磁感应
+	%\include{1/C/01} %磁场
+	\include{1/C/02} %电磁感应
 	%\include{1/C/03} %交流电
 	%\include{1/C/04} %电磁振荡和电磁波
 	%\include{1/C/05} %光的反射和折射
