--- a/fig/C/4-14b.tex
+++ b/fig/C/4-14b.tex
@@ -1,4 +1,4 @@
-\documentclass{standalone}
+\documentclass[border={0pt 0.7cm 0pt 0.7cm}]{standalone}
 \usepackage{tikz}
 \usepackage{ctex,siunitx,ninecolors}
 \usepackage{tkz-euclide}
