--- a/physics.tex
+++ b/physics.tex
@@ -92,8 +92,8 @@
 	%正文内容
 	%\include{1/C/01} %磁场
 	%\include{1/C/02} %电磁感应
-	\include{1/C/03} %交流电
-	%\include{1/C/04} %电磁振荡和电磁波
+	%\include{1/C/03} %交流电
+	\include{1/C/04} %电磁振荡和电磁波
 	%\include{1/C/05} %光的反射和折射
 	%\include{1/C/06} %光的波动性
 	%\include{1/C/07} %光的粒子性
